--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,21 +1,39 @@
 ---
-title: 香港单日感染人数超5万创新高
+title: 韩国著名演员李英爱向乌克兰捐赠1亿韩元
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2098692/)
+`NFSC News` [轉載自GNews](https://gnews.org/zh-hans/2098848/)
 
-撰稿：东京樱花团/立正道
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-257.png)[图片来源](https://news.yahoo.co.jp/articles/4770fbe015af77e97ccd8041bba096cde19b0470/images/000)
-香港政府卫生署卫生防护中心(CHP)和管辖公立医院的医院管理局(HA)于2日召开会见，宣布同日新增5万5，353人感染者。1天感染人数首次超过5万人，从前一天开始大幅增加2万人以上。其中从海外流入的病例只有27人。
+作者：首尔天池农场 – 追着曙光跑
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+据韩国媒体3月1日报道，韩国著名女演员李英爱向被俄罗斯入侵的乌克兰捐赠了1亿韩元，用于人道救助。
 
-在最近的24小时内，年龄在58-100岁的，有117人死亡。另外，2月26日至28日为止没有公布的死者有43人。从年初开始的第5波导致的死者累计有967人。 老年人、残疾人设施新增感染55处，发现入住者488人、职员228人感染。到目前为止，670个设施已经确认被感染。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/8-7.png)
 
-超过5万人“预计内”CHP传染病处的欧家荣首席医生在2日的会见中指出“最近基本上每隔2~3天感染人数会翻倍”，2天超过5万人表示为“预料之中”。 此外，还指出，目前通过快速抗原检测呈阳性的人没有自主申报，表明在自主申报系统完善后感染人数会进一步上升。
+乌克兰驻韩大使特米特里·波诺玛林科，3月1日在推特上公开了李英爱给乌克兰人民捐赠的1亿韩元支票和一封信。
 
-消息来源：[【香港】単日感染者５万人突破、最多を大幅更新（NNA）](https://news.yahoo.co.jp/articles/4770fbe015af77e97ccd8041bba096cde19b0470)
+李英爱在信中写道，作为一位参与过战争的军人的家属，她比任何人都更能深刻地感受到战争的残酷。真心期盼乌克兰战争早日结束，迎来和平。希望乌克兰人民都能安然无恙，希望热爱和平和自由的乌克兰人民不要失去希望和勇气。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/%E4%BA%8C%E7%BB%B4%E7%A0%81.jpg)
+波诺玛林科大使提到，李英爱的来信和捐款让他非常感动，这笔捐款将用于因俄罗斯入侵而成为受害者的人民。
+
+参考链接：
+
+- [이영애, 우크라이나에 1억 원 기부…“전쟁 멈추고 평화 정착되길”](https://news.kbs.co.kr/mobile/news/view.do?ncd=5406466)
+- [https://twitter.com/dp\_ua1972/status/1498512486722531332?s=21](https://twitter.com/dp_ua1972/status/1498512486722531332?s=21)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1-2.png)
+
+总编：飞虹
+编辑：飞虹
+校正/发稿：海阔天空1
+
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
