--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,11 +1,11 @@
 ---
-title: 中共在俄罗斯入侵乌克兰的核威胁和网络威胁中的角色
+title: 国际足联和欧足联禁止俄国家队和俱乐部队参加国际比赛
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098643/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098845/)
 
-02/28/2022 比尔·格茨: 习近平早在2012年就与乌克兰签署了一项协议，为乌克兰提供核保护伞。如果普京对乌克兰使用核武器，那么届时习近平将违反另一项国际协议。此外，中共国和俄罗斯对美国构成了巨大的网络威胁，但美国的网络能力也非常强大。
+02/28/2022 印度媒体Wion：国际足联对上周俄罗斯入侵乌克兰的事件做出回应，取消俄罗斯队参加2022年卡塔尔世界杯的资格。国际足联和欧足联在一份联合声明中说，俄罗斯不会参加即将举行的世界杯预选赛附加赛。同时，所有俄罗斯俱乐部都被暂停参加欧洲足球赛事，直至另行通知。
 
-By:【秘密翻译组-精翻组 G-Translators/Elite Team】
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
