--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,18 +1,42 @@
 ---
-title: 中共国3月3日24时油价上调成定局 92号汽油或破8元
+title: 中共国将继续与俄罗斯保持贸易关系
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2099017/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2099099/)
 
-撰稿—水滴石穿
-校对/上传—无明逆流
+#### **【雅典娜快讯】，紧贴时事脉搏**
 
-墙内时间3月2日，国际原油价格延续涨势。按照当前国际油价屡次破百美元的表现，本轮成品油调价可能会延续上调呈“5连涨”的格局。油价调整时间为：2022年3月3日24时， 这轮油价调整后国内各地的92号汽油零售价也将顺势进入“8元大关”。
+翻译：kl
+编辑：Mttfly
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/screenshoteasy.png)图片来源：原新闻
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/8-8.png)图片来源：雅典娜设计组
 
-对此我的分析是：中共在垂死挣扎，墙内的经济持续萧条，乌俄战争在为石油价格的节节攀升又重重的推动了一把，如此昂贵的油价，是中共当局盘剥的结果，独裁的定价权在手上，想怎么割韭菜就怎么割，高油价不断地推高墙内的各种成本，而此时的地方政府财政也陷入赤字不断扩大的境地，共匪的流氓经济走到头了。
 
-文章来源：[3月3日24时油价上调成定局 92号汽油或破8元](https://auto.sina.com.cn/news/2022-03-02/detail-imcwipih6164509.shtml?cre=tianyi&amp;mod=pchp&amp;loc=29&amp;r=0&amp;rfunc=59&amp;tj=cxvertical_pc_hp&amp;tr=181)
+中共国外交部发言人汪文斌周二（3月1日）在例行记者会上表示，尽管有国际制裁，中共国仍将与俄罗斯保持正常贸易关系。北京将继续进口俄罗斯天然气，同时反对国际制裁。
+
+他表示：“中俄将继续本着相互尊重、平等互利的精神开展正常的贸易合作。”
+
+发言人表示，中方的立场是反对任何“非法实施”的单边制裁，认为“制裁不是解决问题的一个有效办法”。
+
+外交部周二的声明重复了周一新闻发布会上的声明。据中共国外交部网站的官方记录显示，汪文斌在回答路透社记者表示，中俄两国将“继续进行正常的贸易合作”。
+
+周二的新闻发布会上，这位发言人还表示，中方对乌克兰冲突的立场没有改变。在回答有关人道主义援助的问题时，他说中国“准备好在缓解乌克兰局势方面发挥建设性作用”。
+
+中共国常驻联合国代表张军周一在联合国紧急会议上说，通过直接对话和谈判来解决俄罗斯和乌克兰之间的冲突是可能的。
+
+2022年初，俄罗斯总统弗拉基米尔·普京和中共国国家主席习近平发表联合声明，呼吁停止北约扩张。
+
+俄罗斯上周四对乌克兰发动袭击，声称必须动用武力去停止乌克兰对顿涅茨克和卢甘斯克分离地区的袭击，并使该国非军事化和“去纳粹化”。基辅和西方国家谴责俄罗斯无端侵略的行为，对俄罗斯及相关寡头进行经济制裁。
+
+参考新闻：[China to continue trade relations with Russia](https://www.rt.com/news/551036-china-russia-trade-continue/)
+
+*发布：tianzhihuan*
+
+**更****多资讯****，****请关注****：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
