--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,25 +1,37 @@
 ---
-title: 日本政府宣布对白俄罗斯总统实施制裁
+title: 因支持乌克兰，主持人金星微博被禁言
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2098963/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2099082/)
 
-撰稿：东京樱花团/百花李香
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/日本政府宣布对白俄罗斯总统实施制裁.jpg)[图片来源](https://www.businessinsider.com/belarus-lukashenko-revealed-map-russias-ukrainian-invasion-plans-2022-3#:~:text=Putin%27s%20strongman%20ally%20may%20have%20accidentally%20shared%20a%20map%20of%20Russia%27s%20Ukrainian%2Dinvasion%20plans)
+整理：围剿维尼熊
+编辑：朝花夕拾
 
-3月3日，日本政府宣布，因白俄罗斯总统卢卡申科支持俄罗斯对乌克兰的军事入侵，对他实施制裁，冻结其资产。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/f7f3817f4c8144fe.png)图片来源；雅典娜设计组
 
-被制裁者包括总统在内还有七名国家高级官员和白俄罗斯国家军事工业委员会在内的两个组织。
 
-此外，对俄罗斯普京身边的对外情报局局长纳雷什金在内的18名个人和该国的四家主要银行也被列入资产冻结对象。
+根据德国之声中文网3月2日报道，俄罗斯入侵乌克兰后，中共拒绝谴责俄罗斯，并严格控制社交媒体，打压任何支持乌克兰，谴责普京的声音。
 
-信息源：
+继上周中国5名历史学家谴责俄罗斯发动战争的公开信遭中共封杀后，现代舞蹈家著名主持人金星的微博也被禁言。
 
-[ベラルーシへの制裁発表　ロシア大統領側近も　政府](https://news.yahoo.co.jp/articles/e6bf53d139d1176c2caa9b9b8582b6d8002fd705#:~:text)
+3月1日，金星在微博上写道：“2022年最惊悚的事情是，一个脖子上被拴着铁链的中国女人说，这世界不要俺了！一个疯狂的俄国男人说，不要俺继续当总统，俺就不要这个世界了！”微博还配以一张身着蓝黄两色服装的女主播照片并写道：“从央视小姐姐穿的衣服颜色来看，是支持乌克兰的。停止战争，祈祷和平！”金星的这条微博不久即被删帖。
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
+金星继而写道：“我本人没有删微博，是系统给屏蔽了！不带脑子想骂我的人请先在微博上实名认证后再来吧！发表个人观点，尊重所有生命，坚持反对战争！！！ ”这条帖子发出后，金星在微博上被禁言。
+
+俄罗斯入侵乌克兰后，中国迄今拒绝称俄罗斯的行为为“侵略”。为配合官方立场，在许多中共国内社交平台上，支持乌克兰反对战争的言论一概遭到封杀。
+
+参考链接：https://m.dw.com/zh/中国社媒封杀反战声音-金星谴责普京被微博禁言/a-60986633
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
