--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,23 +1,21 @@
 ---
-title: 2022年3月2日澳洲股市简报
+title: 德国将向乌克兰运送防空导弹
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2098936/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2099072/)
 
-**撰稿：云彩**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Slide1-19.jpg)图片来自the Australian
-尽管华尔街和欧洲市场跳水，澳洲股市依然上涨0.3% 。 7117点收盘。
+#### 撰稿：JIHO
 
-澳大利亚公布的第二季度国内生产总值数据经季节性调整后增长3.4%。
+#### 校对：Chris
+![](https://assets.gnews.org/wp-content/uploads/2022/03/strela2m1-2.jpg)图片来源：missilery
+据德国之声 (Deutsche Welle)的报道，德国经济部的消息人士称柏林已批准向乌克兰运送 2700 枚苏联时代的“Strela”导弹，但政府并没有立即证实这一消息。消息人士告诉路透社，这些导弹已经 “准备好被运输”，但联邦安全委员会尚未批准这一行动。
 
-医疗器械公司Polynovo和天然气公司Santos股价涨幅超过6.5%。
+这些武器将来自曾经由苏联监管控制的东德仓库，该仓库在 1989 年柏林墙倒塌后与西德重新统一。
 
-锂矿商Core Lithium股价上涨15%
+上周末，德国政府决定向乌克兰提供 500 枚美制地对空毒刺导弹和 1000 件反坦克武器。
 
-该公司已经与美国特斯拉公司签署四年供应 110 千吨锂的销售合同。
+在俄上周四发动攻势之前，德国拒绝向乌克兰运送武器。但在袭击发生后总理奥拉夫·舒尔茨（Olaf Scholz）说：“在这种情况下，我们有责任尽我们所能，支持乌克兰防御普京军队的入侵。” 根据舒尔茨的说法，此举标志着“一个历史性的转变”。
 
-参考资料：
-
-[Global markets take a hit on Russian strikes, but ASX defies the trend to rise](https://www.abc.net.au/news/2022-03-02/asx-ukraine-russia-kyiv-wall-street-oil-price/100873978)
+新闻来源：[Germany to ship anti-aircraft missiles to Ukraine — reports](https://www.dw.com/en/germany-to-ship-anti-aircraft-missiles-to-ukraine-reports/a-60995325)
 
  
 
