--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,29 +1,23 @@
 ---
-title: 中日财经爆&#124;FTSE Russell和MSCI指数同时将俄罗斯个股踢出
+title: 香港单日新增确诊恐破10万！多家银行停业、公车停驶！
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2098919/)
+`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2099070/)
 
-撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/03/164629529074813_P16158763.png)图片来源：路透
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/FTSE-Russell和MSCI指数同时将俄罗斯个股踢出.jpg)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fnews.cgtn.com%2Fnews%2F3149544e7951444d7849444e7941444f7a456a4e31457a6333566d54%2Fimg%2Fb38adc153ea34d2985affd30b8baa8bf%2Fb38adc153ea34d2985affd30b8baa8bf.jpg&amp;imgrefurl=https%3A%2F%2Fnews.cgtn.com%2Fnews%2F2019-06-24%2FChina-s-A-shares-market-set-for-wider-global-appeal-HN83xAuNX2%2Findex.html&amp;tbnid=wGYvEj9NRaaUnM&amp;vet=12ahUKEwjlzcaxt6n2AhXN_zgGHQi9AQEQMygKegUIARC2AQ..i&amp;docid=c6OeC2P5kSwefM&amp;w=1920&amp;h=1080&amp;q=FTSE%20Russell&amp;ved=2ahUKEwjlzcaxt6n2AhXN_zgGHQi9AQEQMygKegUIARC2AQ)
+香港中共病毒疫情持续蔓延，香港城市大学传染病及公共卫生系助理教授明伟杰预估，香港单日新增确诊病例恐将突破10万例。尽管港共政府林郑月娥表示绝对不会全面封城，但随著确诊人数暴增，多家银行已被迫暂停营业，多条公车也宣布停驶，市民生活大受影响。
 
-指数供应商富时罗素FTSE Russell和明晟MSCI周三（3月2日）表示，旗下指数将全面剔除俄罗斯个股。
+简评：林郑妖娥表示不会全面封城，但之前已经放风要“禁足”，跟中共的所用的套路一模一样，种下一个“封城禁足”的心理暗示，却表示现在不会，可疫情难控了最后不得不封城！新中国联邦已向世界宣布了解药，对症下药才能控制疫情，中共的方式只会害人折磨人，望港人抓紧醒来！
 
-富时罗素称这一决定将从3月7日开始生效，而MSCI称将从3月9日收盘起在所有MSCI指数全面实施。
+新闻来源：[联合新闻网](https://udn.com/news/story/122650/6137960?from=udn-ch1_breaknews-1-0-news)
 
-MSCI同时表示，MSCI俄罗斯指数从新兴市场重新归类为独立市场状态。
+撰稿/发布：一叶知秋
 
-富时罗素(FTSE Russell)是伦敦证券交易所集团 (LSEG)子公司富时集团和弗兰克罗素公司共同推出的股票指数商标。
+**更多资讯，请关注：**
+[多伦多蓝莲花农场 Gettr](https://gettr.com/user/Blue_Lotus)
+[多伦多蓝莲花农场 YouTube](https://www.youtube.com/channel/UCy1z2nsBLlE7BZyS_a_BMWw)
+[多伦多蓝莲花农场 Discord](https://discord.gg/awC74U4YwJ)
 
-明晟公司（MSCI），原名为摩根士丹利资本国际，是一家美国股票基金、收入型基金、对冲基金股价指数和股东权益投资组合分析工具提供商。它发布MSCI BRIC、MSCI World和MSCI EAFE指数。
-
-消息来源:
-
-[MSCI及富时罗素旗下指数全面剔除俄罗斯个股](https://cn.reuters.com/article/msci-ftserussell-russia-0302-idCNKBS2L00A4?il=0)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
