--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,24 +1,12 @@
 ---
-title: 有声｜香港新增确诊5.5万 美对港旅游警示升至4级
+title: 英国石油公司将退出在俄罗斯石油公司的股份
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2098754/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098877/)
 
-By:**秘翻新闻**
+02/28/2022 英国石油公司周日表示，将退出其在俄罗斯国家的俄罗斯石油和天然气公司的股份，以回应俄罗斯对乌克兰的入侵。
 
-**2022-03-03**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/tu88990.png)
-**[据新唐人3月3日报导，香港中共病毒疫情发展迅猛，当地时间3月2日下午，单日确诊人数已突破5.5万，其中只有27例为境外移入，其余均为本土病例。单日死亡人数也在不断攀升。鉴于香港疫情几乎已失控，美国国务院将香港的旅游警示级别提升至最高，呼吁美国国民勿前往。](https://www.ntdtv.com/gb/2022/03/02/a103362475.html)**
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
-**[外界注意到，目前香港的医疗设施收治的确诊者人数合计为6000多人。这意味着近期有数以十万计的新增染疫者，都是在家里自我隔离。](https://www.ntdtv.com/gb/2022/03/02/a103362475.html)**
-
-**[另据《华尔街日报》3月1日报导，由于香港近期的防疫措施越来越严苛，让很多银行业人士及投资者感到不安，由于严苛的出入境限制，许多人难以兼顾事业和家庭，导致金融人才纷纷离开香港。](https://www.ntdtv.com/gb/2022/03/02/a103362475.html)**
-
-（ 秘翻新闻 二丫 编辑 ）
-
-发布:星星
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
