--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,23 +1,38 @@
 ---
-title: 奥密克戎衍生病毒BA.2在日本流行
+title: 新西兰财经G乐部2022年3月3日:财经新闻整理
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2098715/)
+`Finance-GCLUB【新西兰财经G乐部】` [轉載自GNews](https://gnews.org/zh-hans/2098867/)
 
-撰稿：东京樱花团/立正道
+采集整理：蚂蚁的城堡
+![](https://assets.gnews.org/wp-content/uploads/2022/03/image-260.png)
+**1、油价升穿每桶110美元 市场料难以找到俄罗斯供应的替代品**
+![img](https://media.gettr.com/group46/origin/2022/03/03/01/b6960e85-79a0-8379-1b8d-f3442747177c/83285966551a1b165ed4222e3d341991_500x0.png)
+路透纽约3月2日 – 油价周三大涨，升穿每桶110美元，延续了自俄罗斯七天前入侵乌克兰以来的涨势，市场直到收盘一直在大涨，成交量巨大，全球指标布兰特原油创下2014年6月以来的最高收盘水平，美国原油创下2011年5月以来的最高收盘水平。油价涨势强劲，本周迄今，布兰特原油急升了15%以上，西方因俄罗斯入侵乌克兰对莫斯科采取了大量制裁措施，主要针对金融交易和银行，旨在打击俄罗斯经济。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/奥密克戎衍生病毒BA.2在日本流行.jpg)[图片来源](https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.news-medical.net%2Fimages%2Fnews%2FImageForNews_705615_4461992039802088480.jpg&amp;imgrefurl=https%3A%2F%2Fwww.news-medical.net%2Fnews%2F20220227%2FWill-Omicron-BA2-become-the-next-dominant-variant.aspx&amp;tbnid=lzYPOJafYqVtNM&amp;vet=12ahUKEwin57iNrKn2AhU-YmwGHTPtBsEQMygAegUIARCLAQ..i&amp;docid=rpD8f08TZoR6eM&amp;w=1200&amp;h=800&amp;itg=1&amp;q=BA.2&amp;ved=2ahUKEwin57iNrKn2AhU-YmwGHTPtBsEQMygAegUIARCLAQ)
+链接：[https://cn.reuters.com/article/oil-close-0302-wedn-idCNKBS2L001O?il=0](https://cn.reuters.com/article/oil-close-0302-wedn-idCNKBS2L001O?il=0)
 
-日本医师会(日医)的中川俊男会长在2日的记者招待会上表示，国内中共病毒（新冠病毒Covid-19）的感染情况“虽然有减少趋势，但并没有急剧减少”，这可能是奥密克戎株的衍生型BA.2具有强烈的感染力，引起感染扩大的原因，指出“新感染人数可能会增加”。
+**2、俄罗斯联邦储蓄银行退出欧洲，伦敦证交所股价暴跌 95%**
+![img](https://media.gettr.com/group15/origin/2022/03/03/01/445c7ab0-ac75-7486-54e7-58faf27d54ff/83bfd208c6406aebea360024e2da3eee_500x0.png)
+在俄罗斯联邦储蓄银行宣布退出欧洲市场后，该银行周三在伦敦证券交易所的股价暴跌95%，交易价格低至 1 美分。这家俄罗斯最大的银行表示，其欧洲子公司经历了“异常现金流”，并对其员工和财产的安全表示担忧。最近几天，美国、欧盟和英国加大了对俄罗斯机构的制裁力度，禁止主要银行进入 SWIFT 国际支付系统，并限制俄罗斯中央银行使用其超过 6000 亿美元的外汇储备的能力。
 
-中川先生关于31个都道府省适用的防止蔓延等重点措施的效果称“我认为有一定的效果。(感染者数)接近高停状态，但如果没有(重点措施)的话，感染人数也许会增加更多。”另外，在海外出现了对中共病毒对策的放宽管制的举动，他表示“日本也应该根据感染状况和疫苗接种率等，做出缓和限制的判断”。另一方面，他又补充说，“现在的感染情况，没有必要大幅缓和各种限制。”
+链接： [https://www.cnbc.com/2022/03/02/russias-sberbank-collapses-95percent-on-london-exchange-as-it-exits-europe.html](https://www.cnbc.com/2022/03/02/russias-sberbank-collapses-95percent-on-london-exchange-as-it-exits-europe.html)
 
-消息来源：
+**3、《士兵突击》制片人被逮捕,还被浙文影业追讨2.64亿**
+![img](https://media.gettr.com/group34/origin/2022/03/03/02/9b98248c-8f2a-ce8e-8705-55402149816e/8f254c5aebb176dc34fadc2f07e4fac1_500x0.png)
+近日，A股上市公司浙文影业公告，子公司天意影视法定代表人吴毅，涉嫌职务侵占犯罪被公安机关刑事立案侦查。2月28日，吴毅被东阳市人民检察院批准逮捕。吴毅出生于1963年，现任天意影视董事长、总经理。他是业内知名的制片人，担任过《士兵突击》、《我的团长我的团》、《王大花的革命生涯》等热播剧的制片人。同时，浙文影业已正式向浙江省杭州市中级人民法院提交诉讼材料，向吴毅、新余上善若水（由吴毅实际控制）追讨业绩补偿款2.64亿元。
 
-[ＢＡ・２拡大で「増加に転じる可能性も」　日医会長](https://news.yahoo.co.jp/articles/963870fbeee2b1a796a46669e8357496291a5652)
+链接：[https://finance.sina.com.cn/stock/zqgd/2022-03-03/doc-imcwipih6274702.shtml](https://finance.sina.com.cn/stock/zqgd/2022-03-03/doc-imcwipih6274702.shtml)
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
+**4、连续两年财务造假，\*ST新亿面临重大违法强制退市**
+![img](https://media.gettr.com/group7/origin/2022/03/03/02/d4a89ffa-75d3-05a4-a2af-672f4913d869/49fd9d9f52f56c52afc2e6cdb2c9b3cf_500x0.png)
+3月2日晚间，\*ST新亿发布公告称，近日已收到证监会行政处罚决定书。根据决定书认定的事实及公司2020年年度报告，\*ST新亿2018年、2019年年度报告存在虚假记载，追溯调整后，公司2018年-2020年连续三个会计年度营业收入低于1000万元。当晚，上交所向\*ST新亿火速下发监管工作函和拟终止上市事先告知书，公司股票自3月3日开盘起停牌。
+
+链接： [https://finance.sina.com.cn/wm/2022-03-03/doc-imcwiwss3868772.shtml](https://finance.sina.com.cn/wm/2022-03-03/doc-imcwiwss3868772.shtml)
+
+审核校对：蚂蚁的城堡（一审）、文勇（二审）
+
+上传排版：文勇
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
