--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,24 +1,11 @@
 ---
-title: 视频&#124;被俘俄罗斯士兵深感遗憾
+title: 共产主义中国是美国和世界面临的唯一最重要的生存威胁
 ---
-`MOSVIDEO` [轉載自GNews](https://gnews.org/zh-hans/2098636/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098843/)
 
-制作：香草山视频部
+02/28/2022 皮特·纳瓦罗：共产主义中国是美国和世界面临的唯一最重要的生存威胁
 
-（导语）几天来，在对乌克兰的入侵中，很多俄军士兵成为俘虏。他们神情沮丧，意志消沉，充满欠疚。不过他们受到了良好的对待。
-
-经询问，这些被俘的士兵居然是被以演习的名义诓诱到乌克兰作战的，有些人甚至不清楚出击的任务和目标。他们称，俄军没有必要来乌克兰打仗，乌克兰人不希望与俄罗斯开战。乌克兰人的战斗只是在抗击俄罗斯人的入侵。
-
-（请播放视频：[https://mega.nz/folder/Xk0iDICY#ZlVBFRjz5Yd0reE6-8gqkQ](https://mega.nz/folder/Xk0iDICY#ZlVBFRjz5Yd0reE6-8gqkQ) 视频时长：4’37”）
-
-发稿：Daxia
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8bb89a94-5a5c-4a66-9e0b-6e0fb983838e.jpg)
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
