--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,22 +1,25 @@
 ---
-title: 俄乌战争｜摩根大通料俄罗斯将现债务违约 澳新分析或可透过人民币债周转
+title: 中日财经爆&#124;日本“堂吉诃德”将接收100名乌克兰难民
 ---
-`關注組` [轉載自GNews](https://gnews.org/zh-hans/2099028/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2099100/)
 
-**撰文/ 港台前线｜发布日期/ 03/03/2022**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/摩根大通料俄羅斯將現債務違約-澳新分析或可透過人民幣債週轉.jpg)
-**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
+撰稿：东京樱花团/peterwong
 
-自美欧连同全球主要国家同时冻结俄罗斯央行的外汇存底及禁止其使用SWIFT结算系统后，外界十分关注俄罗斯经济会否崩溃。对此，摩根大通（JPMorgan）的分析师持悲观态度，并警告俄罗斯最快本月底就会出现第一轮债务违约，预计涉及金额将高达7亿美元。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/日本堂吉诃德将接收100名乌克兰难民.png)[图片来源](https://www.yomiuri.co.jp/pluralphoto/20220303-OYT1I50086/)
 
-根据摩根大通的分析认为，俄罗斯为了反制美国制裁，对外汇设限，令付款链受到影响，进一步增加了俄罗斯债务违约的风险。最快本月16日俄罗斯就要面临两笔到期债务，即使有30日的宽限期，下月15日都仍然会违约。多个评级机构已表明，一旦出现违约将大手调低俄罗斯的信用评级，这无疑会加剧该国日后进行周转及调动资本难度。
+经营折扣店“堂吉诃德”的泛太平洋国际控股公司（PPIH）于3月3日宣布，为了积极响应岸田政府的难民政策，准备接收100名俄罗斯军事入侵而造成的乌克兰难民。具体而言，该公司利用所经营的商店平台，针对政府认证的难民，提供财务支持、生活支援以及提供就业机会。作为人道主义援助的一部分，该公司表示，“我祈祷未来扩大对国内流离失所者的支持范围。”
 
-另一方面，澳新银行（ANZ）经济师分析发现，俄罗斯目前有超过6,300亿美元外汇储备，其中二成，即1,400亿美元，分别由俄罗斯央行及俄罗斯主权财富基金持有，价值800亿美元及600亿美元人民币债券，数字显示人民币在俄罗斯外滙储备中所占比例，已由去年公布的13%提高至22%水平。经济师认为，如果近期内俄央行大手放售人民币债，或可应付其他外债到期付款。
+围绕俄罗斯的军事入侵乌克兰事件，日本首相岸田文雄3月2日晚对记者表示，将要推进日本接收乌克兰避难人员事宜。岸田首相说：“目前国际社会所面临的重大复杂局面下，我们积极声援乌克兰民众。而且，今后我们将接受从乌克兰撤离到第三国避难的人员”。
 
-俄罗斯央行自2017年起不断减持美元资产转投人民币及黄金等，连番操作旨在减轻美国制裁对当地经济伤害，惟即使俄罗斯手持人民币债可透过人民银行的人民币跨境支付系统（CIPS）处理，CIPS结算量仍远低于SWIFT，期望借此逐步取代美元结算的领导地位仍是天方夜谭。
+岸田继续补充道：“我们首先计划接收有亲友住在日本的人员，但同时也会从人道主义角度出发予以应对。为了向乌克兰提供有力的支持，我们今后也将与七国集团（G7）、其他成员以及国际社会一道进一步加强合作。”
 
-来源｜[CNN](https://edition.cnn.com/2022/03/02/investing/default-sanctions-russia/index.html)、[路透社](https://www.reuters.com/markets/europe/russian-central-bank-sovereign-fund-may-hold-140-bln-chinese-bonds-anz-2022-03-03/)
+消息来源:[ドンキ、ウクライナ難民１００世帯受け入れ表明…経済支援や店舗で雇用も](https://www.yomiuri.co.jp/economy/20220303-OYT1T50216/)
 
+[岸田表示将推进接收乌克兰避难人员](https://www3.nhk.or.jp/nhkworld/zh/news/352466/)
+
+*编辑：东京樱花团/逢⑦必变
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
