--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,29 +1,20 @@
 ---
-title: 中日财经爆&#124;受制裁影响 阿布决定出售切尔西足球俱乐部
+title: 俄乌战争｜ 土耳其无人机运抵乌克兰 料军援陆续有来
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2098974/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2099097/)
 
-撰稿：东京樱花团/peterwong
+**撰文/ 港台前线｜发布日期/ 03/03/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/土耳其無人機運抵烏克蘭-料軍援陸續有來.jpg)
+**更多资讯请关注官方盖特｜please follow our Gettr （**[**https://gettr.com/post/pl6w8he0b9**](https://gettr.com/post/pl6w8he0b9)**)**
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/受制裁影响-阿布决定出售切尔西足球俱乐部.png)[图片来源](https://www.google.com/imgres?imgurl=http%3A%2F%2Fn.sinaimg.cn%2Fsports%2Ftransform%2F199%2Fw600h399%2F20220227%2F57cd-ebe005044bfc77fe768a8c57b584f15d.jpg&amp;imgrefurl=https%3A%2F%2Fsports.sina.com.cn%2Fg%2Fpl%2F2022-02-27%2Fdoc-imcwiwss3136470.shtml&amp;tbnid=WFMFbXkHWFJ9aM&amp;vet=12ahUKEwilj4iUuqn2AhXf_jgGHSs2BvgQMygBegUIARDSAQ..i&amp;docid=_89gHvMk0JK9ZM&amp;w=600&amp;h=399&amp;itg=1&amp;q=%E9%98%BF%E5%B8%83%20%E5%88%87%E5%B0%94%E8%A5%BF&amp;ved=2ahUKEwilj4iUuqn2AhXf_jgGHSs2BvgQMygBegUIARDSAQ)
+乌克兰防长列兹尼科夫（Oleksiy Reznikov）周三（2日）证实，土耳其制TB2型攻击无人机已运抵乌克兰并投入对俄作战，不仅如此，他还透露，西方国家早前承诺提供的导弹及更多的土耳其无人机会陆续有来。
 
-受国际社会对俄罗斯强力制裁影响，俄罗斯富商阿布拉莫维奇周三(3月2日）表示，他将出售切尔西足球俱乐部，并承诺将出售所得收入用于帮助乌克兰战争的受害者。
+这是土耳其自答允乌克兰要求，封锁黑海连结地中海的博斯普鲁斯海峡（Bosphorus）之后，再一次高调支持乌克兰，提供无人机军援，相信此举会对土俄关系造成负面影响。
 
-在俄罗斯入侵乌克兰后，国际上要求制裁阿布拉莫维奇的呼声越来越高。他在声明中表示：“鉴于目前的情况，我因而做出出售俱乐部的决定，因为我相信这符合俱乐部、球迷、员工以及俱乐部赞助商和合作伙伴的最佳利益。”
+据悉，乌克兰开战前有6架同型无人机，并由去年起用作攻击乌东分离分子，当时透过土耳其配套的精准弹药取得了巨大战果。
 
-阿布拉莫维奇表示，他不会要求偿还自己提供给切尔西的贷款（15亿英镑)，也不会快速处理出售事宜。
+来源｜[路透社](https://www.reuters.com/world/europe/ukraine-receive-more-missiles-turkish-drones-minister-says-2022-03-02/)
 
-阿布拉莫维奇在声明中表示，他已经要求他的助手成立一个慈善基金会，由基金会接收出售球队的净收益。该基金会将为乌克兰战争的所有受害者服务。“这包括为受害者的紧急和紧迫需求提供关键资金，以及支持长期的恢复工作。”
-
-阿布拉莫维奇在2003年以1.4亿英镑买下这家西伦敦俱乐部，他的投资为切尔西队史上最成功的时代做出了巨大贡献，这段期间切尔西五度称霸英超联赛、五度夺下足总杯冠军，两度在欧洲冠军联赛封王。
-
-消息来源:
-
-[制裁呼声四起 俄富豪阿布决定出售英超豪门切尔西](https://cn.reuters.com/article/russian-abramovich-chelsea-sale-0302-wed-idCNKBS2L00AT?il=0)
-
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
