--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,19 +1,31 @@
 ---
-title: 习神普帝今年完了
+title: 邪恶的中共政权才是万恶之源（五）
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2098973/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2099083/)
 
-撰稿—爱战神
-校对/上传—无明逆流
+撰稿：东京樱花团/深藏不露
 
-2022年3月2日郭文贵先生在大直播劲爆：2022年不会再有习太阳、普大帝，他们完球蛋了。他进一步透露，有可靠情报来源：普京身体状况出现了很大问题。在2015年文贵先生就告诉中东及美国朋友：别看普京满身肌肉块，身体并不好。习太阳做过两次大手术，身体非常糟糕，他们俩都是69岁，跨不过七十这道坎，撑不过今年，属于兔子的尾巴。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/邪恶的中共政权才是万恶之源（五）.jpg)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/W28.jpeg)图片来源：中共央视
+2022年3月2日郭文贵先生大直播爆料：
 
-文贵先生分析道：一战、二战，所有人类历史上的昏君，都是在身体变化后作出了无法想象的决定。所以七哥以前一直在说2022年是人类历史上最黑的一年，真是料事如神，普大帝发动战争、习太阳继续放毒、疫苗毒性爆发……经济大崩溃，货币大幅贬值，整个世界灾难深重、民不聊生！
+1999年南斯拉夫大使馆被炸后，美国政府当时跟江泽民说：“先生，今天你帮我一个忙，你要求是2亿美元，我给不了你2亿，我给你5000万美元吧。”他的秘书和他所有的保镖都在旁边，我也在现场，在京西宾馆。江泽民大手一挥，“算了吧，不要5000万，给一半就行了。”最后，美国大使馆捐了1000万，还有再给了个1000万，最后拿到2400万，每个人分了800万美元现金。中国大使馆说给中国英雄的一家人100万美元。从一家100万美元里边儿再扣除这样那样的费用，最后拿到手里不超过100万人民币。美国给这仨英雄的花哪去了？美国炸大使馆是肯定不对。但炸之前，美国有没有通报不要干这种事情？最重要的是你们到前线参战，美国的被打的轰炸机是中国帮助定位打下来的。所以说，战争永远是极少数人疯狂和愚蠢的行动，但是要利用更多人的愚蠢！
 
-文贵先生畅谈：在人类最黑暗的时候，有一颗最亮的星星，那就是我们新中国联邦，将来的中国没有独裁、与世界和平相处、一人一票……新中国联邦的战友们有着美好的未来，做一个欣赏满山遍野鲜花的赏花者，做一个享受新鲜空气、温暖阳光的人。最终，中国人生活在一个没有独裁统治的国家，幸福无比！
+现在，邪恶的俄罗斯总统普京为了个人私利悍然发动战争，世界正义的国家都纷纷严厉谴责，并且还给予乌克兰各种支援，而中共国的老百姓却一片欢呼，伟大的习近平不仅不谴责，反而为普京入侵乌克兰提供各种支援！还有更可怕的事，在中共邪恶的荼毒下的中国老百姓不仅没有明辨是非，反而在热论如何占有饱受战乱痛苦的乌克兰女人！
 
+为什么中国人距离文明越来越远，越来越被这个世界所厌弃呢，一切的根源就在于邪恶的中国共产党！可怜的中共国老百姓从小就饱受邪恶的商鞅五术的荼毒，人生每走一步都充满艰辛，却总是站在割韭菜者的角度去思考，以为自己也手握锋利镰刀，可以潇洒收割别人，却从不想想为什么呢？中共通过不断的愚民教育来降低老百姓辨别是非和逻辑思维能力，让中共国的老百姓眼中只有利益，为了利益不择手段、没有底线！通过愚民教育，将善良的老百姓教育成第一次相互见面就是看对方的身份、身价、有没有对自己有利，然后再选择是跪着仰视还是挖苦讽刺？中共国也有许多有良知的人士发出正义的声音，对于这种声音邪恶的中共极其恐惧，害怕打破中共邪恶的壹民政策，毫不人性的去血腥镇压！
+
+俄乌打仗，是侵略和非正义的战争，而世界上只有中国的老百姓吃着地沟油，不辩是非的支持邪恶的普京！更有甚者竟然鼓励普京放核弹！如果不灭共，这样的悲剧还会一遍又一遍的上演……
+
+当今社会，邪恶的中国共产党才是万恶之源！只有将中国共产党彻底消灭，才能解救受苦受难的中国同胞！通过正道主义和逻辑思维教育让中国同胞辩是非、明善恶！通过放开媒体管制，让中国同胞认清中共国策商鞅五术的驭民本质！彻底认识到邪恶的马列主义，是精神毒药！那时，中共给中国同胞下的蛊毒才会被彻彻底底从体内清除！！
+
+信息来源：
+
+[2022年3月2日 文贵大直播](https://gettr.com/streaming/pxru0n55ba)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
