--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,20 +1,50 @@
 ---
-title: 美国公民参加乌克兰的反俄斗争
+title: 文•贵天成——文贵先生谈“普京”（十二）
 ---
-`喜马拉雅德国纽伦堡正义农场` [轉載自GNews](https://gnews.org/zh-hans/2098940/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2099078/)
 
-翻译：金陵小生
-编辑发稿：am夏天
-德国纽伦堡正义农场
+**整理：BENJ1
+编辑：小红帽**
 
-新闻来源：https://www.foxnews.com/us/american-citzen-joins-ukraines-fight-russia
+- ![文章配图](https://assets.gnews.org/wp-content/uploads/2022/03/1-7.png)图片来源：雅典娜农场设计组（614）
 
-内容翻译精选：
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-261.png)保罗曾是第101空降师的一名伞兵，多次被派往伊拉克，保罗很快报名参加了（照片经许可使用）
-陷入困境的乌克兰总统沃洛季米尔-泽伦斯基呼吁 “乌克兰的每一位朋友””加入到保卫乌克兰、欧洲和世界的行列中来”。乌克兰组建了一个外国战士军团，帮助保卫这个东欧国家免受俄罗斯入侵。泽伦斯基说，乌克兰已经收到了希望加入国防军的人的 “数千份请求”。
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-262.png)（照片经许可使用）
-来自德克萨斯州的美国公民保罗很快就报了名。他曾是第101空降师的一名伞兵，多次被派往伊拉克。 一年多前，他搬到了乌克兰，是越来越多的外国人中的一员，志愿保卫国家，对抗俄罗斯军队。当被问及为何为外国而战时，保罗毫不犹豫地回答。”我认为在这场危机中帮助乌克兰人民是我的道德义务”。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/德农二维码-30.png)
+
+**郭文贵先生2021年12月10日直播**
+
+你知道习近平和普京是什么关系吗？我告诉大家，普京的女朋友，每一周，最起码一个月两次，从俄罗斯飞到索契，就是夏都。从索契再换一架飞机，完全是密飞，国与国之间是密飞，直接用军用飞机飞过来，没有什么代码就过来了。直接飞北京西郊机场，原来都飞北京首都机场，由于我曝海航事儿以后，改为西郊机场，军事机场。
+
+从飞机下来以后，这个姐妹，穿着都是这么高的高跟鞋，因为她是军人出身。然后，小胸挺着，咔咔咔拎着文件包，这一手拎着是自己吃的东西。她从来不吃北京的任何东西，都是带自己吃的东西。接待她的人都是习远平安排的，连丁薛祥都轮不着。这哥们直接去，跟习当面谈，把普京的话传完，然后该签地签，该说地说完，扭头回去。习这边儿谁去呢？偶尔习远平去一去，曾经派杨洁篪传过话，后来不让杨洁篪参与。这是两个人之间关系，到了这个程度。所以你看到习去俄罗斯，俄罗斯普京过来，这块都是这两人个人之间沟通，就好到这样的程度。
+
+习拿了一万亿美元的现金给了俄罗斯，就是要抗美，就是所谓的十年大战略。习近平修宪，我修宪，你修宪；我接着干，你接着干；你弄乌克兰，我弄台湾，咱一起干美国。然后，干欧洲，我取钱，你取地，阻止北欧通过。非洲是我的，中东是你的，然后在中东咱俩一起分油。你看，这都是哥俩商量好的。
+
+**郭文贵先生2021年12月29日直播**
+
+更重要的事情，普京参加这冬奥会，这回打他脸啊。我可以告诉大家确切的消息，普京同志收了钱啦。也公开了，是吧？收到钱24小时公布:本人决定应约参加北京冬奥会。
+
+然后，普京私下答应习:我一定弄几个哥们去，谁谁谁，1、2、3，4。这四个人，仨已经正式拒绝，绝对不去了，就是普京的面子也不给，习的面子也不给。据说普京也玄乎。钱收了后，普京说:最近身体有点状态不太好，我要到什么索契亚，我可能要度一下假，治疗一段时间。腰后椎疼，后椎疼啊。哇，这对习打击太大了。如果是普京收了这一千亿，最后不来，还一个哥儿们没带来，这相当于什么？哇噻!这个事太大了，听说在党内影响巨大。
+
+往期回顾：
+[文•贵天成——文贵先生谈“普京”（一）](https://gnews.org/zh-hans/1990454/)
+[文•贵天成——文贵先生谈“普京”（二）](https://gnews.org/zh-hans/1992091/)
+[文•贵天成——文贵先生谈“普京”（三）](https://gnews.org/zh-hant/1997918/)
+[文•贵天成——文贵先生谈“普京”（四）](https://gnews.org/zh-hans/1998162/)
+[文•贵天成——文贵先生谈“普京”（五）](https://gnews.org/zh-hans/1998174/)
+[文•贵天成——文贵先生谈“普京”（六）](https://gnews.org/zh-hans/1998177/)
+[文•贵天成——文贵先生谈“普京”（七）](https://gnews.org/zh-hans/2002397/)
+[文•贵天成——文贵先生谈“普京”（八）](https://gnews.org/zh-hans/2090925/)
+[文•贵天成——文贵先生谈“普京”（九）](https://gnews.org/zh-hans/2090993/)
+[文•贵天成——文贵先生谈“普京”（十）](https://gnews.org/zh-hans/2091987/)
+文•贵天成——文贵先生谈“普京”（十一）
+
+发布：tianzhihuan
+
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
