--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,29 +1,25 @@
 ---
-title: 秘翻在线：担心俄罗斯利用加密货币规避制裁，民主党人向财政部施压
+title: 秘翻在线: 乌克兰驻日本大使馆公开俄军入侵计划文件
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2099460/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2099624/)
 
-**撰稿：彩虹**
+撰稿:沙莉
+![](https://assets.gnews.org/wp-content/uploads/2022/03/그림1-2.jpg)(图片源于https://www.chunichi.co.jp/article/428153)
+乌克兰驻日本大使馆3日更新了官方推特说，获得了一份关于俄罗斯入侵乌克兰计划的机密文件，并公布了该计划的照片。
 
-**校对：人间四月**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/11-4.jpg)图片来源：彭博社
-据《国会山报》3月2日报道，鉴于人们对俄罗斯是否可以利用数字资产来规避美国制裁措施的担忧正在上升，民主党人正在向财政部（Treasury Department）施加压力，要求其提供有关在加密货币行业内实施制裁计划的信息。
+【图】乌克兰驻日本大使馆公开俄军入侵计划文件
 
-这封周三写给财政部的信由几位民主党人带领立法者们共同牵头，包括参议员伊丽莎白·沃伦（Elizabeth Warren）、参议院情报委员会主席马克·华纳（Mark Warner），参议院银行、住房和城市事务委员会主席谢罗德·布朗（Sherrod Brown）和参议院军事委员会主席杰克·里德（Jack Reed）。
+“乌克兰军队消灭了俄罗斯黑海舰队的一支部队后，乌克兰联合部队作战司令部宣布获得有关入侵乌克兰计划的机密文件”。
 
-在信中，立法者们询问了财政部“在监测和执行加密货币行业遵守制裁方面的进展”，然后表达了对“犯罪分子、无赖国家和其他行为者可能利用数字资产和替代支付平台，作为一种新的手段来隐藏跨境交易以达到邪恶目的”的担忧。
+“根据这份文件得知，入侵乌克兰的计划是1月18日获得批准的，入侵定于2月20日开始”，也就是说北京奥运会所有比赛结束的那一天就是入侵的开始日期。 “另外，攻击行动期为15天，到3月6日为止。”
 
-信中写道，鉴于拜登政府因俄罗斯正在进行的军事入侵而对其实施的一系列制裁，这些担忧变得更加紧迫。立法者们还引用《纽约时报》最近发表的一篇报道，其中专家警告说，俄罗斯公司可以利用“加密货币工具”来规避制裁。
+从公布的照片显示，该图以’20.02’开始，表示2月20日，以’06.03’结束，表示3月6日。北京奥运会闭幕式于21日举行。
 
-报道指，立法者们要求财政部在3月23日之前回答相关问题，问题包括：“外国资产管制处（OFAC）将如何与外国政府和国际银行界的其他参与者合作，以确保加密货币不被用来逃避制裁。”以及所有“外国资产管制处在虚拟货币行业记录的违反制裁行为是什么？”
+网络上众说纷纭，但多数人认为该战略是看准北京奥运会的赛程的，比如”他们是想在奥运会和残奥会之间结束？所以普京如此着急”等等。
 
-对于相关支持，立法者问道：“外国资产管理处可能需要哪些额外的工具，以确保加密货币参与者不能帮助俄罗斯或其他恶意行为者逃避美国和多边制裁？”
+信息来源: [https://www.chunichi.co.jp/article/428153](https://www.chunichi.co.jp/article/428153)
 
-文章说，在周三的信件发布后不久，沃伦告诉国会：“已经很清楚的是，贩毒者、勒索软件、骗子和偷税漏税者都在使用加密货币，因为它是一种在当局无法追踪的情况下转移资金的方式。所以问题是，财政部如何评估风险，他们对此做了什么？这就是我们现在对财政部进行推动的原因。”
-
-**新闻来源**
-
-[Democrats press Treasury over concerns Russia could use cryptocurrency to evade sanctions](https://thehill.com/homenews/house/596601-house-passes-resolution-backing-ukraine)
+责编: Eric Kim
 
  
 
