--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,19 +1,34 @@
 ---
-title: 中共与普京密谋在冬奥之后俄再入侵乌克兰
+title: 美国退役伞兵加入国际军团以抵抗俄军
 ---
-`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2099371/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2099447/)
 
-**翻译：verifunny**
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Screenshot-2022-03-03-184411.jpg)
-美国和欧洲官员透露中共国要求普京将俄罗斯入侵乌克兰的行动推迟到北京冬奥会结束之后。
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-据《纽约时报》报道，这些信息是由一个西方情报机构在俄罗斯入侵乌克兰之前收集的，并且被认为是可信的。当西方政府试图了解俄罗斯是否会入侵其邻国时，美国官员和他们在盟国的伙伴之间传递了这些信息。
+整理：围剿维尼熊
+编辑：Mohegayer K. Simon
 
-该情报称这并不意味着中共主席习近平和普京之间为此直接进行了对话，虽然他们于2月4日在北京奥运会开幕式前进行了会晤。俄罗斯可能对入侵的时间很敏感，因为俄国在2008年8月入侵格鲁吉亚，当时中共国正在举办夏季奥运会。
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/f7f3817f4c8144fe.png)图片来源：雅典娜设计组
 
-中共国驻华盛顿大使馆发言人称这些说法是没有任何依据的猜测，目的是为了推卸责任和抹黑中共国。
 
-所有人都很明显从这样的报告中看懂中共和俄国的勾兑很深，而且历史悠久。这则报告也广泛地在世界各主流媒体报道，进入塔西陀陷阱的中共是赖不掉的。这是不是意味着对中共的讨伐在不久的将来发生？七哥说就算中共不打台湾，中共都会遭到清算的。愿这一天早日来临！
+根据大纪元2022年3月3日讯，俄罗斯的入侵导致数十万人逃离乌克兰，但也有数万身居国外的乌克兰人返回家园与入侵者作战，甚至一些他国公民也加入了这场战斗。
+
+据福克斯新闻报导，乌克兰组建了一个外籍战士军团，希望国际人士帮助保卫这个正面临威胁的国家。总统泽连斯基说，乌克兰已经收到了来自外国公民的“数千份请求”，希望加入该国部队帮助抗击俄罗斯。
+
+美国德克萨斯州公民保罗（Paul）已经报名参加了乌克兰的外籍战士军团。保罗曾是美军第101空降师（101st Airborne Division）的伞兵，多次被部署到伊拉克。一年多前，他搬到了乌克兰。
+
+根据美国国务院的规定，美国公民加入国际军团是合法的。但是，如果有人在美国境内被雇用，就可能违规。
+
+参考链接：[美退役伞兵加入国际军团 帮乌克兰抵抗俄军](https://www.epochtimes.com/gb/22/3/2/n13617034.htm)
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
