--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,34 +1,41 @@
 ---
-title: 普京完全被孤立:联合国大会要求俄罗斯从乌克兰撤军
+title: DC大中华时事：外交部应询介绍在乌中国公民撤离情况
 ---
-`英国伦敦喜庄园德语 Himalaya London Club UK-DE` [轉載自GNews](https://gnews.org/zh-hans/2099362/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2099442/)
 
-**投票结果很清楚：141个国家谴责俄罗斯。五个国家投票反对该决议，包括中国在内的35个国家投了弃权票。**
+*编辑： 西北风/ 作图：*虎子哥
 
-作者：AFP
+![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
 
-翻译：Luckycky/校对:  文斌
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image1-1.tif)图片：GETTY IMAGES NORTH AMERICA/大会投票结果
+#   墙国妄语每日驳
 
-在纽约举行的联合国大会通过了一项决议，呼吁俄罗斯 “立即”撤出乌克兰。周三有141个成员国投票赞成该决议，5个成员国投票反对，35个成员国弃权，包括中（共）国。在该决议中，成员国“以最强烈的措辞谴责”俄罗斯对乌克兰的入侵，并谴责俄罗斯总统弗拉基米尔·普京决定将其国家的核部队置于高度戒备状态。
+### **0**3.02.2022
 
-德国外交部长安娜莱娜·贝尔博克（Annalena Baerbock，绿党）在前一天的纽约联合国大会紧急会议上呼吁对该决议投赞成票。俄罗斯“粗暴地攻击”了国际和平秩序。“这就是为什么这场战争不仅涉及乌克兰，不仅涉及欧洲，而且涉及我们所有人。”
+[俄媒文章：乌克兰危机将俄彻底推离西方\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/column/20220303/2471157.shtml)
 
-德国外交部发言人周三在柏林表示，该决议应是“整个世界向俄罗斯”发出的一个“强大信号”，即“不应以这种方式接受”对乌克兰的侵略战争。
+***简评：***俄乌战争我们看到俄罗斯虽然结束了苏共的极权专制，进行了西方民主政治体制改革，但现在俄罗斯普京个人意志就可以决定俄罗斯整个国家历史走向，披着民主的外衣，实质上是个人集权专制，就像中共一样，披着马克思共共产主义理论外衣，实质上是专制独裁一样，这里面就有值得探讨的问题了，如果不能理清回答这个问题，如果我们将来推翻中共，如果换来的未来政治情形如同现在的俄罗斯，甚至还不如现在的俄罗斯那是有极大概率的，相比来讲，中共好灭，中共思想的余毒不是一朝一夕就可以消除。
 
-联合国大会周一举行了其历史上仅有的第11次紧急会议。上周，俄罗斯在联合国安理会否决了一项谴责袭击乌克兰的决议。与安理会不同，俄罗斯在联合国大会中没有否决权。
+### 03.02.2022
 
-西方国家指责俄罗斯攻击乌克兰，违反了《联合国宪章》第二条，该条原则上禁止成员国对其他国家“威胁或使用武力”。另一方面，俄罗斯援引了第51条规定的“个人或集体自卫权”，而这一点遭到了西方的坚决反对。
+[外媒：世界银行停止在俄罗斯和白俄罗斯所有项目\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/ckkx/kuaixun20220303/2471142.shtml)
 
-俄罗斯军队于上周四入侵了乌克兰。周日，克里姆林宫领导人弗拉基米尔·普京随后下令核部队进入高度戒备状态—这是冲突的进一步升级。
+***简评：***一个好的制度胜过好的人，俄罗斯在苏共的废虚上建立，由于苏共从体制到经济到人的思维历史和现实的原因俄罗斯试图快速过渡到一个稳定的民主和法治的国家构想和尝试最初是极度失败的，这才不得不重新选择“强人普京”。其实中共真是一个对中国人民负责任的政府的话，改革开放四个多年完全有时间和机会从容过渡到一个依靠民主法治权力制衡和平衡运转的好的管理体制，只可惜中共像历朝历代帝王一样死抓住权力不放最终使全体国人错失了一个中国真正崛起的机会，这一错误的选择全体中国人又要将为此负出巨大的代价。
 
-由于俄罗斯在乌克兰的侵略战争，西方对俄罗斯实施了严厉的经济和金融制裁。其中，除了该国的银行业和航空公司受到影响，还包括普京和他的外交部长谢尔盖·拉夫罗夫以及与克里姆林宫关系密切的几个政治寡头。
+### 03.02.2022
 
-原文链接：[https://www.berliner-zeitung.de/welt-nationen/putin-voellig-isoliert-un-vollversammlung-fordert-von-russland-abzug-aus-ukraine-li.214966](https://www.berliner-zeitung.de/welt-nationen/putin-voellig-isoliert-un-vollversammlung-fordert-von-russland-abzug-aus-ukraine-li.214966)
+[外交部应询介绍在乌中国公民撤离情况\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220302/2471106.shtml)
 
-发布：Luckycky
-![](https://assets.gnews.org/wp-content/uploads/2021/09/战鹰团新logo2021-07-01-1.jpg)
+***简评：***通过俄乌战争，自媒体成为一股决定战胜负关键力量，通过对自媒体时时刻刻影响参战双方，世人可以时实知道感知战场进况，世大通过自媒体了解真相，唯真不破，在真正相面前人总会做出确判撕，正义或邪恶，善良或虚假的。就像滞留乌克兰华人向中共驻乌大使馆求助，中共的战狼变战狗形象让世人一目了然，中共的假恶丑暴露无遗，中共外叫部现在再怎么愚弄欺骗大众也是徒劳无功。同时样乌克兰人民有了自媒体平台，人民再次凝聚起来，世界通过自媒体了解真相，正在源源不断的提供各种人道援助，没有那一次战争像俄乌战争自媒体体把全世界连在了一起。
 
+#   港台资讯
+![](https://media.discordapp.net/attachments/858887785507323904/948430328031240243/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/948430455911362560/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/948430588921143356/03.png?width=1043&amp;height=586)
+
+
+
+
+*编辑：*西北风
+*作图：虎子哥
+发布：文顾*
 
  
 
