--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,41 +1,28 @@
 ---
-title: DC大中华时事：外交部应询介绍在乌中国公民撤离情况
+title: 2022/03/01 墙内世界
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2099442/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2099585/)
 
-*编辑： 西北风/ 作图：*虎子哥
-
-![](http://himalayawashingtondc.org/wp-content/uploads/2021/08/ScreenShot-2021-08-01-at-17.25.09@2x.png)
-
-#   墙国妄语每日驳
-
-### **0**3.02.2022
-
-[俄媒文章：乌克兰危机将俄彻底推离西方\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/column/20220303/2471157.shtml)
-
-***简评：***俄乌战争我们看到俄罗斯虽然结束了苏共的极权专制，进行了西方民主政治体制改革，但现在俄罗斯普京个人意志就可以决定俄罗斯整个国家历史走向，披着民主的外衣，实质上是个人集权专制，就像中共一样，披着马克思共共产主义理论外衣，实质上是专制独裁一样，这里面就有值得探讨的问题了，如果不能理清回答这个问题，如果我们将来推翻中共，如果换来的未来政治情形如同现在的俄罗斯，甚至还不如现在的俄罗斯那是有极大概率的，相比来讲，中共好灭，中共思想的余毒不是一朝一夕就可以消除。
-
-### 03.02.2022
-
-[外媒：世界银行停止在俄罗斯和白俄罗斯所有项目\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/ckkx/kuaixun20220303/2471142.shtml)
-
-***简评：***一个好的制度胜过好的人，俄罗斯在苏共的废虚上建立，由于苏共从体制到经济到人的思维历史和现实的原因俄罗斯试图快速过渡到一个稳定的民主和法治的国家构想和尝试最初是极度失败的，这才不得不重新选择“强人普京”。其实中共真是一个对中国人民负责任的政府的话，改革开放四个多年完全有时间和机会从容过渡到一个依靠民主法治权力制衡和平衡运转的好的管理体制，只可惜中共像历朝历代帝王一样死抓住权力不放最终使全体国人错失了一个中国真正崛起的机会，这一错误的选择全体中国人又要将为此负出巨大的代价。
-
-### 03.02.2022
-
-[外交部应询介绍在乌中国公民撤离情况\_参考消息网 (cankaoxiaoxi.com)](http://m.cankaoxiaoxi.com/china/20220302/2471106.shtml)
-
-***简评：***通过俄乌战争，自媒体成为一股决定战胜负关键力量，通过对自媒体时时刻刻影响参战双方，世人可以时实知道感知战场进况，世大通过自媒体了解真相，唯真不破，在真正相面前人总会做出确判撕，正义或邪恶，善良或虚假的。就像滞留乌克兰华人向中共驻乌大使馆求助，中共的战狼变战狗形象让世人一目了然，中共的假恶丑暴露无遗，中共外叫部现在再怎么愚弄欺骗大众也是徒劳无功。同时样乌克兰人民有了自媒体平台，人民再次凝聚起来，世界通过自媒体了解真相，正在源源不断的提供各种人道援助，没有那一次战争像俄乌战争自媒体体把全世界连在了一起。
-
-#   港台资讯
-![](https://media.discordapp.net/attachments/858887785507323904/948430328031240243/01.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/948430455911362560/02.png?width=1043&amp;height=586)![](https://media.discordapp.net/attachments/858887785507323904/948430588921143356/03.png?width=1043&amp;height=586)
+1. 2月28日，广东深圳核酸检测的大型排队现场，老百姓们被折腾的苦不堪言。
+2. 疫情下的城市市民不是在面对每天的核酸例行检测，就是在面临逐渐加固的封锁网和渐渐被缩小的自由生活圈。
+3. 2月28日，广东深圳。面对中共的疫情封锁政策，发达城市中曾经熙熙攘攘的人群，如今在闹市区域也不复存在。
+4. 2月25日，湖北武汉再次袭来的疫情成功的击垮了本就脆弱的个体户经济，不明就里的人们都在默默承受着他们自认为的人生中的“坏运气”。
+5. 2月27日，内蒙古包头。跳绳者背后特意被平展的中共党旗表明，这些出现在中共舆论宣传镜头里，努力被展示的“欢快”景象都是中共有意为之。没有人会喜欢在如此不透气的防护服内做剧烈的运动。
+6. 2月26日，陕西西安市长安区，市民家中流出的饮用水。市民质疑这样的水质问题恐怕跟当地高发的癌症病例不无关系
+7. 2月25日，陕西西安潘家庄，中共政府出动的拆迁队伍。只要中共政府想拆，就不会允许出现反对的声音。彻底不让村里门面房营业，每间门面门口都有人把守着！
+8. 2月26日，安徽合肥， 高层小区消防栓没水，耽误消防员灭火。导致屋内老人被烧身亡 “烧了一小时，开门直接就送殡仪馆了”。
 
 
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
-*编辑：*西北风
-*作图：虎子哥
-发布：文顾*
+编辑：【英国伦敦喜庄园编辑部】
+
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
