--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,76 +1,27 @@
 ---
-title: 普习梦
+title: 大众汽车停止了在俄罗斯的全部业务
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2099437/)
+`英国伦敦喜庄园德语 Himalaya London Club UK-DE` [轉載自GNews](https://gnews.org/zh-hans/2099548/)
 
-作者：香草山教育部-蓝之灵（Hortensia)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-都在梦里
-编织美好梦境
-互发个奖状
-做心灵慰藉
-我们是彼此的太阳
-做大帝相互扶持
-你好我好
-不用管
-他人不好
+**大众汽车退出俄罗斯市场–对德国就业的影响尚不清楚**。
 
-有人说我们是疯子
-那又怎么样
-全力握在手中
-梦境里
-我们叱诧风云
-唯我独尊
+翻译：Luckycky
+![](https://assets.gnews.org/wp-content/uploads/2022/03/pasted-image-3.tiff)图片：2009年10月20日，俄罗斯总理弗拉基米尔·普京（左）与大众汽车公司首席执行官马丁·温特科恩在俄罗斯卡卢加的一家大众汽车工厂开幕式上握手。/dpa
 
-于是
-你给我钱
-我打了乌克兰
-炮灰穿透天地
-这是我权力威力
-人民在流血
-我管你死活
-悲惨世界
-我今日造起
-哈哈哈哈哈
-你与我举杯
-庆祝
+据媒体报道，周四来自沃尔夫斯堡的消息：“在俄罗斯袭击事件的背景下，集团执行委员会决定停止在俄罗斯的汽车生产，直到进一步通知。欧洲最大的汽车集团也将“立即停止”对俄罗斯的出口。
 
-世界愤怒了
-全世界反战了
-提供武器
-提供燃料
-封锁了钱和权
-你和我
-输了
-只剩下裤衩
-快给我钱
-快给我钱
-没有没有
-没有没有
-我们输了
-只剩裤衩和
-烂命两条
+原文链接：[https://www.berliner-zeitung.de/wirtschaft-verantwortung/volkswagen-stoppt-gesamtes-geschaeft-in-russland-li.215044](https://www.berliner-zeitung.de/wirtschaft-verantwortung/volkswagen-stoppt-gesamtes-geschaeft-in-russland-li.215044)
 
-梦呢
-我们的梦呢
-破碎了
-只剩裤衩
-和
-烂命两条
+发布：Luckycky
+![](https://assets.gnews.org/wp-content/uploads/2021/09/战鹰团新logo2021-07-01-1.jpg)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/IMG_2280.jpg)
 
-审核/编辑/发稿:qiutian（邱甜）
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1.png)
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
