--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,32 +1,76 @@
 ---
-title: 大直播后记：不能相信共产党的任何话
+title: 普习梦
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2099340/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2099437/)
 
-整理：Ghope，铁血丹心
-编辑：Sadhu
+作者：香草山教育部-蓝之灵（Hortensia)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+都在梦里
+编织美好梦境
+互发个奖状
+做心灵慰藉
+我们是彼此的太阳
+做大帝相互扶持
+你好我好
+不用管
+他人不好
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/2-14.png)图片来源：雅典娜设计组
+有人说我们是疯子
+那又怎么样
+全力握在手中
+梦境里
+我们叱诧风云
+唯我独尊
 
+于是
+你给我钱
+我打了乌克兰
+炮灰穿透天地
+这是我权力威力
+人民在流血
+我管你死活
+悲惨世界
+我今日造起
+哈哈哈哈哈
+你与我举杯
+庆祝
 
-有时候看自己过去视频的时候，真不好意思，你七哥有时候看你七哥（自己）的视频时候说这是谁呀?有时候 七哥也要脸，有时候看自己 ，七哥什么时候不要脸的时候，也不好意思啊，这个现在我有害羞感了。 这不知道意味着什么啊？
+世界愤怒了
+全世界反战了
+提供武器
+提供燃料
+封锁了钱和权
+你和我
+输了
+只剩下裤衩
+快给我钱
+快给我钱
+没有没有
+没有没有
+我们输了
+只剩裤衩和
+烂命两条
 
-小宇宙：谢谢文贵先生，就是刚才文贵先生在这个视频之前也提到了，作为这个乌克兰的总统，他曾经作为一个喜剧演员，然后呢他现在让所有看上去貌似比他厉害的政客都成为了世界上的一个很大的一个笑话，所以呢这两天就是今天我看到一个新闻，就是那个赵立坚，他作为一个中共国的一个狗 腿子，他已经开始就是回舔那个美国了，然后我想问一下就是文贵先生， 这个普京大帝被中共国给舔了一百年的时间，然后呢他现在有没有真正的发现，他自己已经被中共国卖了这样的一个结局？ 另外呢就是中共国一掐脖子就翻白眼，一松手就吹牛叉的这样的一个本性，它是不是真的？ 通过这个新闻我们可以看到它是真的认怂呢，还是它只是一个虚假的一个宣传？谢谢文貴先生！
+梦呢
+我们的梦呢
+破碎了
+只剩裤衩
+和
+烂命两条
 
-七哥：一切都是假的，你宁可相信你七哥是个女的，你也不能相信中国共产党任何一句话！前天我给你七嫂在那说句话，你七嫂问我，这个现在这个国内，你七嫂老看国内发信息，秒视频啊什么头条啊，她不看英文的，说你看这真假？你七嫂子开始怀疑，这个挺好的。我给她举了个例子，我说我给你说一个人，就现在的某政治局委员，我跟他第一次认识吃完饭以后，这一开始很傲慢，后来中间时候习给他打电话，然后他给习说完话以后回来说，习打电话说关于这个奥运会的开幕式啊如何如何，他说这个货不长脑子很官僚，就这么说习。然后再回来以后跟我说，哎文贵呀，你这个地方太重要啊，这个我有什么什么要求，我都答应他了，然后谈特别好，他走了以后用他的保镖——就是所谓的安全人员给我手机发信息，说我是谁谁谁，今天跟你的见面让我很惊讶，中国还有你这样的企业家，还有你这样的人啊？
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMG_2280.jpg)
 
-然后我就给他拍马屁，首长我也很荣幸啊，见您如见红太阳啊，简直是你了又帅又好啊。实际上他真一点都不帅。 那七哥跟共产党这30多年，那这招学的好着呢，是吧？！我也会搀着他的膀子前面走，七哥那招你没见过，那绝对是有这个泽连斯基的这个演小丑的水平。他是演生活中的小丑，我是演政治上真正的小丑， 我也演了30多年。那么他回复是，跟我认识很多高官一样，（问）“你今天的表现是对这个国家这个体制的尊敬，还是对我个人的魅力的喜欢？”问这些问题，你说这些人还喜欢这个政权吗？
+审核/编辑/发稿:qiutian（邱甜）
 
-资料来源：[2022年3月2日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
+![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1.png)
 
-发布：tianzhihuan
-
-更多资讯，请关注：
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+**更多资讯，更多关注**
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
