--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,63 +1,38 @@
 ---
-title: 对比和伤害
+title: 美国白宫对俄罗斯和白俄罗斯最新制裁
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2099339/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2099428/)
 
-作者：香草山教育部蓝之灵（Hortensia)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
-没有对比就没有伤害
-没有伤害就不会醒来
-总是要付出血的代价
-才会在
-铁幕沉沉心田
-开出一丝缝隙
-让光
-透进来
+作者：波士顿五月花背靠背（Frankie）
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screen-Shot-2022-03-03-at-6.46.55-PM.png)图片来源：互联网
+美国白宫周三（3月2日）对俄罗斯和白俄罗斯做出新的制裁，回应俄罗斯入侵乌克兰。
 
-被谎言笼罩世界
-欺骗总是家常便饭
-人与人之间信任
-就是这样被毁坏
-爱
-离开
-越来越远
-留下的
-是荒漠与干寒
+白宫表示：”正与盟国和伙伴协调，对俄罗斯和白俄罗斯施加额外的经济成本。美国将采取行动追究白俄罗斯促成普京入侵乌克兰的责任，削弱俄罗斯国防部门及其未来几年的军事力量，瞄准俄罗斯最重要的财富来源，并禁止俄罗斯航空公司进入美国领空。“【1】
 
-还不醒来
-还不醒来
-没有了毒食品
-没有饱腹感
-习惯了谎言
-不敢信
-唯真不破世界
+白宫还表示，俄罗斯已经成为全球经济和金融的弃儿。
 
-还不醒来
-还不醒来
-炮灰纷飞土地上
-请看见爱与关怀
-打开心田
-让光进来
-唯真不破世界
-就在身边
-醒来，醒来
-让光进来
-新中国联邦救援
-就在身边
+最新制裁包括:
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image0-4.jpg)
+1、对白俄罗斯全面限制其技术产品的进口。美国商务部将把对俄罗斯出口管制政策扩大到白俄罗斯，防止物品、技术和软件通过白俄罗斯转移到俄罗斯。
 
-审核/编辑/发稿:qiutian（邱甜）
+2、美国国务院对22个被指认的俄罗斯国防实体全面封锁制裁。包括为俄罗斯军队制造作战飞机、步兵战车、电子战系统、导弹和无人驾驶飞行器的公司。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/March-1.png)
+3、针对俄罗斯军事主要收入来源制裁。商务部限制长期支持俄罗斯炼油能力的技术出口，美国和盟友在逐步减少降低对俄罗斯能源依赖有着共同利益。
 
-**更多资讯，更多关注**
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+欧盟国家对煤炭需求的减少，转向更加清洁的能源-天然气，加剧了对俄罗斯能源的依赖，比如欧盟天然气进口大约50%来自俄罗斯，德国对俄罗斯天然气依赖超过50%。因此德国在俄罗斯入侵乌克兰早期，态度不明确，左右为难。
+
+郭先生大直播指出，就在俄罗斯入侵乌克兰时候，俄罗斯通过北溪2号线给德国供应天然气一刻也没有停过。
+
+4、商务部在与机构间合作伙伴的协调下，通过管理支持俄罗斯和白俄罗斯军队的实体清单，确保军队以及航空航天、海事和高科技部门不会获得可用于支持俄罗斯技术维护和创新的美国技术产品和技术。
+
+5、禁止俄罗斯飞机进入和使用美国国内空域，孤立俄罗斯，与世界上30多个最重要的航空市场站在一起，剥夺了俄罗斯航空公司开展业务的能力。【1】郭先生2月25日大直播中爆料，一个俄罗斯拥有5000架超级私人飞机，仅南法俄罗斯游艇价值就是俄罗斯GDP（1万多亿美元）一倍达2万亿美元， 每年固定成本20%即2000亿。
+
+参考链接：【1】**[美国继续为普京的选择之战向俄罗斯和白俄罗斯施加成本](https://www.whitehouse.gov/briefing-room/statements-releases/2022/03/02/fact-sheet-the-united-states-continues-to-impose-costs-on-russia-and-belarus-for-putins-war-of-choice/)**
+
+* * *
+
+*编辑&发布：Vicky*
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
