--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,89 +1,34 @@
 ---
-title: 他告诉我&#8217;我已经决定了&#8217;&#8211;于是我帮他收拾行囊去支援乌克兰
+title: 人口贩卖产业链
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2099247/)
+`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/2099380/)
 
-编译：雄起 (酷翻组)
-采集：玫瑰新闻组
+BY:银河系农场|楚天秋
+![](https://assets.gnews.org/wp-content/uploads/2022/03/图片1-13.png)
+图源：网络
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/30397.jpg)
+多数墙国百姓对拐卖妇女儿童也有所耳闻，因为中共隔段时间就搞一次打拐专项行动，让人们感觉声势挺大，特别是那些还在寻找失踪儿童的家庭，会觉得有希望。然而丰县铁链女事件发生之后，中共又宣布从3月1日到12月31日，在全国范围内打击拐卖妇女儿童犯罪。这时候搞专项行动，似乎就没什么声势了，细想之下总觉得不对劲。丰县已经被围得铁桶一般谁也进不去，铁链女还被绑在医院病床上，这众所周知的性质极其恶劣的绑架、强暴、虐待、残害连环罪案，已有不了了之的趋势。这个案子都弄到天怒人怨尚不能解决，谁还指望全国范围的打拐行动，公安部此时打拐，是在讲冷笑话，言下之意就是别当真，无论发生什么事，有没有观众，它们都继续演下去。
 
-一位前往乌克兰与俄罗斯人作战的爱尔兰男子的妻子讲述了等待丈夫最新信息的焦急心情。
+中共在全国范围内搞任何运动，目的只有一个，就是洗脑。每隔几年就要运动一下的不止是打拐，还有扫黄打非、扫黑除恶，仿佛民间有无数个色情泛滥、黑帮横行，老百姓苦不堪言，急需中共救民于水火。
 
-每隔两个小时，玛丽娜-宾科就会焦急地等待她的手机发出短信的提示。
+每次行动结束，毫无意外地表彰会，展示出一个有一个成果，有的没的全算上，从一个胜利走向下一个胜利，这才是最关键的，让老百姓忘记自己的痛苦，跟着中共的节奏起起伏伏，这是它们的真实目的。
 
-就像时钟一样准时，昨天中午刚过，她的设备上的屏幕亮起了唯一能让她保持平静的话语：”我很好。”
+实际上全是扯淡，黄赌毒一个基层派出所就能完全搞定，收归治下，定期收账，坐地分赃，在中共这个宇宙最大黑帮面前，还有谁敢说自己是黑社会，谁敢说自己是捞偏门的，老老实实帮中共干脏活，适时地被拉出几个来平民愤，这大概就是黄赌毒存在于民间的意义。
 
-发信人是她的丈夫瓦迪姆，他在基辅的一栋废弃大楼里发信息，他和一群一直住在爱尔兰的乌克兰志愿者正在准备与俄罗斯军队作战。
+李莹事件之后，再看“打拐”完全是个伪命题。这个案件暴露的真相不是拐卖可以概括的，这种规模化、程序化、职业化和严密程度，是人口贩卖全产业链。每年几百万人口，在密布监控摄像头的中共国凭空失踪，找回的寥寥无几，这就是中共参与其中而且起决定作用造成的。这些被绑架的人，也不局限于妇女儿童，青壮年男性可能被用来器官配型，除了满足中共高层换器官的需要，也为各地医院提供器官来源，这在郭先生爆料中已经证明。当然也有部分“没用”的男性，可能流入黑煤窑和黑砖窑，最终结局多数是残杀虐待而死。妇女儿童受到的折磨更久，产业链条延申的更长。如果被卖给所谓的黑社会组织，那么下一级要么进入色情场所，要么被弄成残疾沿街乞讨，长期为黑社会赚钱，也成为中共定期收割的对象。还有就是如铁链女这样的，直接献给当地官员，玩腻了转手在民间倒来倒去。
 
-这些人中的许多人已经在爱尔兰生活了十年以上，他们于周日（2月27日）离开都柏林，飞往波兰的克拉科夫，并从那里通过汽车和火车前往基辅。
+这个产业链的任何环节，都必须有中共官员的庇护，不然很难进行下去，所谓的地方大姓，并非指的是纯民间的宗族势力，这是中共瞎说的，49年之后不存在宗族势力，官权是唯一压倒性的势力，任何黑恶势力不抱住中共的大腿，一天也存在不下去。当老百姓恨天地不公，自己命该如此的时候，其实就是中共在背后作恶。贪腐盗国是中共的主业，掌控庞大的人口贩卖作为副业，一直存在。就像那些自己吸毒又贩毒的毒贩一样，中共的邪恶需要任意虐杀同类，但这和贪腐不同，
 
-在他们位于莱伊斯和都柏林等地的家中，他们的妻子忧心忡忡地等待着消息。
+是个正常人都无法接受，所以必须严密控制消息，以至于铁链女被折磨二十多年才暴露在大众面前。
 
-宾科女士告诉《爱尔兰独立报》：”只要我每两小时收到一次短信，我就安心了。”
+随着越来越多人口贩卖事件被揭露，墙内较为活跃的互联网用户开始觉醒，这大概相当于郭先生经常说的健心过程，中共行将覆灭，要让墙内百姓认清其邪恶本质，需要一个适应过程。正如那些身在乌克兰的小粉红，贴着五星红旗被打爆轮胎，才知道自己被中共坑了一样。
 
-“那时我就能知道瓦迪姆还活着，他没事。但我不知道他们到底在哪里，他们在做什么。我不需要知道这些，因为我知道这些信息对他来说是不安全的。”
+作者：楚天秋
 
-瓦迪姆是劳伊斯州罗森纳利斯GAA球场的一名场地维护工人，在乌克兰总统弗拉基米尔·泽连斯基向在海外的公民发出呼吁后，他做出了勇敢的决定，于周日飞回国。这位三个孩子的父亲已经在爱尔兰生活了20年。
+发布：天雷滚滚
 
-宾科女士说：”我整日整夜地坐在那里，等待着消息的到来。”
-
-“我今天早上和他通过话了，所以现在我很平静，因为现在他是安全的。”
-
-宾科女士（35岁）是一名会计，与丈夫结婚9年了。这对夫妇育有两个孩子本（15岁）和维罗妮卡（7岁）。
-
-她的大家庭仍然生活在乌克兰，还有瓦迪姆的与前妻的女儿。
-
-她解释说：”瓦迪姆的女儿已经成年了，她和她的男朋友住在基辅。”
-
-“本，与她非常亲近。从上周四开始，他发现日子非常难熬。然后当他的父亲离开后，日子就更煎熬了。战争开始后，瓦迪姆的女儿和她的男朋友搬到了北方。她男朋友的母亲住在一个小村庄，他们决定住在那里更安全。到目前为止，他们很安全”。
-
-在解释她丈夫决定离开安全的爱尔兰去与俄罗斯军队作战时，宾科女士说，虽然她担心他的安全，但她理解他的理由。
-
-“我们没有想到会发生战争，”她说。”尽管我们一直在关注事情的发展，但瓦迪姆和我都不相信会发生这种情况。
-
-“我父亲住在乌克兰的一个小村庄里，我们一直从他那里得到关于正在发生的事情的信息。和我一起长大的朋友也发来信息和照片，说他们的孩子睡在避难所里。
-
-“瓦迪姆看不下去了，他的女儿还在那边。他说，’如果我只是坐视不管，我永远不会原谅自己’。”
-
-“我并没有试图阻止他。如果不是为了孩子们，我自己也会去那里，尝试帮助他们。你可以在医院里帮忙，或者做饭，帮助制作燃烧瓶，我可以通过很多方式来提供帮助。”
-
-与宾科女士一样，捷佳娜-普罗滕斯科现在也整天都在等待她丈夫的消息。
-
-她的丈夫罗曼是一位52岁的两个孩子的父亲，住在都柏林的邓德鲁姆，他与瓦迪姆和其他志愿者一起于周日从爱尔兰前往他们的祖国。
-
-“他对我说他想去，我说，’不可能，那里有专业军人，不行’，”普罗滕斯科女士说。
-
-“我说，’你在这里也可以做很多事情，你可以筹款，发送物资’，他说，’我不能，我感觉到我内心的呼唤。我必须要走’。”
-
-“他说，’我已经决定了，你就帮我打包吧’，所以我当然照做了。每个女人都会想和所爱的人待在一个安全的地方，所以我当然会担心。我理解他想去履行他的职责，但我们只想让这一切停止。”
-
-与此同时，来自爱尔兰的同组人员之一，住在都柏林布兰查德镇的马克西姆-萨维奇（Maksym Savych）介绍了基辅的最新情况。
-
-“谢天谢地，我们昨晚都能睡上一觉，”萨维奇先生昨天早上告诉《爱尔兰独立报》。”今天我们将专注于训练小组中没有战争经验的人。”
-
-萨维奇先生是乌克兰人，已经在都柏林生活了20年，他说他被乌克兰军队的一位营长任命为新兵排长。
-
-这位23岁的年轻人在移居爱尔兰之前，曾在乌克兰军队中工作过六年。他是周日晚上离开爱尔兰去参加战斗的10名乌克兰男子之一。
-
-据萨维奇先生说，这些人正在基辅市一个安静的地方躲避，志愿者们向他们提供了弹药、食物和水。
-
-在都柏林一家家具公司工作的萨维奇先生说，他准备留在乌克兰，只要能 “结束这场战争 “就好。
-
-他说：”我们都有家庭，我们明白这些风险。”
-
-“人们问我们为什么离开爱尔兰到这里来战斗，这是我的祖国啊！我出生在乌克兰，每个从爱尔兰来的人在乌克兰都有一个家。我们需要拯救我们的国家。”
-
-“我会留在这里，打完这场战争。为保卫祖国而死，将是结束生命最光荣的方式之一。”
-
-新闻链接：
-
-[https://www.independent.ie/world-news/europe/he-told-me-i-have-decided-and-so-i-helped-him-pack-for-war-in-ukraine-41405233.html](https://www.independent.ie/world-news/europe/he-told-me-i-have-decided-and-so-i-helped-him-pack-for-war-in-ukraine-41405233.html)
-
-**校对：sherryok（水云间）
-审核校对：Barry Jack
-上传排版：V在途中**
-
+日本[银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/345-1-1-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
