--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,50 +1,20 @@
 ---
-title: 总统蔡英文给蓬佩奥颁奖增强台美联系
+title: 中共与普京密谋在冬奥之后俄再入侵乌克兰
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2099175/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2099371/)
 
-翻译：peacelv
+**翻译：verifunny**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Screenshot-2022-03-03-184411.jpg)
+美国和欧洲官员透露中共国要求普京将俄罗斯入侵乌克兰的行动推迟到北京冬奥会结束之后。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-269.png)**总统蔡英文（右）和美国前国务卿迈克-蓬佩奥（左）。中新社照片 2022年3月3日**
+据《纽约时报》报道，这些信息是由一个西方情报机构在俄罗斯入侵乌克兰之前收集的，并且被认为是可信的。当西方政府试图了解俄罗斯是否会入侵其邻国时，美国官员和他们在盟国的伙伴之间传递了这些信息。
 
-台北，3月3日（中新社）总统蔡英文周四向来访的美国前国务卿蓬佩奥授予特别荣誉，以表彰他在任期内为促进华盛顿和台北之间的关系所做的贡献。
+该情报称这并不意味着中共主席习近平和普京之间为此直接进行了对话，虽然他们于2月4日在北京奥运会开幕式前进行了会晤。俄罗斯可能对入侵的时间很敏感，因为俄国在2008年8月入侵格鲁吉亚，当时中共国正在举办夏季奥运会。
 
-在仪式上，曾在前总统唐纳德-特朗普手下担任本国最高外交官的蓬佩奥被授予特别大绶带辉煌之星勋章，因为蔡英文称他是台湾的亲密朋友，同时代表台湾人民表示深切感谢。
+中共国驻华盛顿大使馆发言人称这些说法是没有任何依据的猜测，目的是为了推卸责任和抹黑中共国。
 
-在她的讲话中，蔡英文赞扬了蓬佩奥在其任期内取消美国国务院对美国官员与台湾同行因没有官方关系而进行互动的限制，以及为美国高级官员访问台湾提供便利的开创性措施。
+所有人都很明显从这样的报告中看懂中共和俄国的勾兑很深，而且历史悠久。这则报告也广泛地在世界各主流媒体报道，进入塔西陀陷阱的中共是赖不掉的。这是不是意味着对中共的讨伐在不久的将来发生？七哥说就算中共不打台湾，中共都会遭到清算的。愿这一天早日来临！
 
-由于他对台湾的重复和公共支持，蓬佩奥已经在这个国家赢得了很高的欢迎，根据蔡的说法。
-
-接到这项荣誉后，蓬佩奥感谢蔡和台湾人民，他说他认识的台湾人民是“高尚的，有爱心的，需要自由的人民。”
-
-作为对蔡英文对他结束两国外交官交流限制决定的赞扬的回应，蓬佩奥说这是一个“简单，正确和合理”的决定。
-
-蓬佩奥说，取消这些限制的决定不是党派或政治性的，而是代表了 “美国的承诺”，他补充说，这符合他的国家的最佳利益，也有利于确保和发展美国和台湾之间的友谊。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-273.png)**蔡英文总统向美国前国务院卿迈克-蓬佩奥颁发特别大绶带辉煌之星勋章。中新社照片 2022年3月3日**
-
-关于俄罗斯对乌克兰的持续入侵，蓬佩奥说，”如果我们中的任何一个人对这种自由所面临的风险感到错误或自满，我想我们只需要观察今天在欧洲发生的事情。”
-
-“的确，对这些事情一走了之，表明没有决心，那些渴望破坏自由以改变人类生活的人，会听到安静或没有直接语言……承认人类条件的基本现实，视为他们的机会，”他补充说。
-
-“我相信你不会允许这种情况在你的眼皮底下发生，而且我向你保证美国人民与你一起努力。”蓬佩奥告诉蔡。
-
-蓬佩奥在星期三稍晚时候到达台湾，由他的妻子苏珊蓬佩奥和他中国政策上的前顾问余荗春和其它九个人陪同。
-
-在他的四天访问中，预计3月５日蓬佩奥和他的妻子将会和高级政府官员和商人见面，在星期四他发表一个由政府下属的展望基金会组织的演讲。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-271.png)**蓬佩奥和蔡英文（中新社）**
-
-**点评：美台之间的官方和非官方联系都将触动中共国敏感的神经，由于蓬佩奥的访台，中共国还同时发动了对台湾的网络战。**
-
-素材链接：[focustaiwan.tw][President Tsai awards medal to Pompeo for enhancing Taiwan-U.S. ties](https://focustaiwan.tw/politics/202203030008)
-
-* * *
-
-*审核：Bryan 
-校对: 五通庙
-发稿: Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/西喜-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
