--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,50 +1,32 @@
 ---
-title: 辉瑞COVID疫苗对预防Omicron仅有12%有效性
+title: 大直播后记：不能相信共产党的任何话
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2099120/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2099340/)
 
-编译：Jenny Ball
+整理：Ghope，铁血丹心
+编辑：Sadhu
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/image-265.png)图片来源:republicbrief.com
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/2-14.png)图片来源：雅典娜设计组
 
-周一，纽约州官员透露，辉瑞-生物科技COVID-19 疫苗对保护 5 至 11 岁儿童免受 Omicron 变种病毒引起的感染几乎没有作用。
 
-纽约州卫生部的一组研究人员，计算了接种辉瑞疫苗的未成年人的感染率。 在这项研究中，儿童根据年龄被分为两组——从 5 岁到 11 岁，从 12 岁到 17 岁。
+有时候看自己过去视频的时候，真不好意思，你七哥有时候看你七哥（自己）的视频时候说这是谁呀?有时候 七哥也要脸，有时候看自己 ，七哥什么时候不要脸的时候，也不好意思啊，这个现在我有害羞感了。 这不知道意味着什么啊？
 
-在较小的年龄组中，辉瑞注射仅 1 个月后，在预防 Omicron 感染方面的效果仅为 12%。
+小宇宙：谢谢文贵先生，就是刚才文贵先生在这个视频之前也提到了，作为这个乌克兰的总统，他曾经作为一个喜剧演员，然后呢他现在让所有看上去貌似比他厉害的政客都成为了世界上的一个很大的一个笑话，所以呢这两天就是今天我看到一个新闻，就是那个赵立坚，他作为一个中共国的一个狗 腿子，他已经开始就是回舔那个美国了，然后我想问一下就是文贵先生， 这个普京大帝被中共国给舔了一百年的时间，然后呢他现在有没有真正的发现，他自己已经被中共国卖了这样的一个结局？ 另外呢就是中共国一掐脖子就翻白眼，一松手就吹牛叉的这样的一个本性，它是不是真的？ 通过这个新闻我们可以看到它是真的认怂呢，还是它只是一个虚假的一个宣传？谢谢文貴先生！
 
-这些发现可能对疫苗接种，以及父母是否会鼓励孩子接种疫苗有直接影响。
+七哥：一切都是假的，你宁可相信你七哥是个女的，你也不能相信中国共产党任何一句话！前天我给你七嫂在那说句话，你七嫂问我，这个现在这个国内，你七嫂老看国内发信息，秒视频啊什么头条啊，她不看英文的，说你看这真假？你七嫂子开始怀疑，这个挺好的。我给她举了个例子，我说我给你说一个人，就现在的某政治局委员，我跟他第一次认识吃完饭以后，这一开始很傲慢，后来中间时候习给他打电话，然后他给习说完话以后回来说，习打电话说关于这个奥运会的开幕式啊如何如何，他说这个货不长脑子很官僚，就这么说习。然后再回来以后跟我说，哎文贵呀，你这个地方太重要啊，这个我有什么什么要求，我都答应他了，然后谈特别好，他走了以后用他的保镖——就是所谓的安全人员给我手机发信息，说我是谁谁谁，今天跟你的见面让我很惊讶，中国还有你这样的企业家，还有你这样的人啊？
 
-Covid 病毒不会对儿童构成太大风险，因为住院和死亡极为罕见。
+然后我就给他拍马屁，首长我也很荣幸啊，见您如见红太阳啊，简直是你了又帅又好啊。实际上他真一点都不帅。 那七哥跟共产党这30多年，那这招学的好着呢，是吧？！我也会搀着他的膀子前面走，七哥那招你没见过，那绝对是有这个泽连斯基的这个演小丑的水平。他是演生活中的小丑，我是演政治上真正的小丑， 我也演了30多年。那么他回复是，跟我认识很多高官一样，（问）“你今天的表现是对这个国家这个体制的尊敬，还是对我个人的魅力的喜欢？”问这些问题，你说这些人还喜欢这个政权吗？
 
-这些发现表明，无论为他们接种疫苗的主要原因是什么：防止他们传播病毒，疫苗对阻止他们传播病毒几乎没有作用。
+资料来源：[2022年3月2日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
 
-年仅五岁的儿童必须出示疫苗接种证明才能进入纽约等城市的室内餐厅、健身设施和娱乐场所。在某些情况下，学校活动还要求儿童接种疫苗。
+发布：tianzhihuan
 
-这才可能是影响一些父母给孩子接种疫苗决定的原因——因为年幼儿童的疫苗接种率相对较低——但该州现在发布的官方数据显示，疫苗对保护儿童几乎没有效果。
+更多资讯，请关注：
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/76QVRChsgU)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-除了这些担忧之外，一些父母决定不顾潜在的副作用给孩子接种疫苗，但后来发现， 疫苗并没有宣传的那么有效。
-
-辉瑞陷入困境，监管机构甚至指示该公司在第三剂数据可用之前，提交请求，因为该公司希望向年轻群体提供疫苗。
-
-将疫苗接种资格扩大到数百万幼儿，也将为这家总部位于纽约的公司带来一笔可观的资金。
-
-它有效地垄断了一个极其有利可图的市场，因为它是美国年轻人唯一可用的机会。
-
-在疫苗中，mRNA 技术也存在问题。
-
-根据疾病控制和预防中心 (CDC) 的说法，接受辉瑞公司和莫德纳公司的注射剂（该公司还为**Covid **提供**mRNA **疫苗）者有患上罕见心脏病的风险，例如心脏炎症。这是一种在年轻男性中尤其普遍的风险。
-
-**评论：译者的担心是：父母现在发现了疫苗对保护孩子免于感染Covid病毒没有作用，但是家长竟然不顾潜在的副作用，而正是这些潜在的副作用，如心脏病，可能将使自己的孩子终生处于病痛和灾难之中。这不能怪没有医学知识的家长们，而是那些身处保护公共卫生健康的专家，政府人员，罔顾这些潜在的副作用，这已经不是失职之过，而且公认犯罪、谋杀罪、种族灭绝罪。历史会让真相大白于天下！**
-
-新闻来源:[republicbrief.com] [Pfizer’s COVID vaccine is just 12% effective in preventing Omicron](http://republicbrief.com/pfizers-covid-vaccine-is-just-12-effective-in-preventing-omicron/)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/03/西喜-1.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
