--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,9 +1,9 @@
 ---
-title: 一向中立的瑞士宣布将加入欧盟对俄罗斯的所有制裁
+title: SpaceX星链卫星互联网终端已抵达乌克兰
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098879/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098886/)
 
-02/28/2022 一改传统的中立态度，瑞士总统伊格纳齐奥·卡西斯表示，瑞士将采取欧盟对俄罗斯人和公司实施的所有制裁措施，并冻结他们的资产，以惩罚俄罗斯入侵乌克兰的行为。
+03/01/2022 SpaceX星链卫星互联网终端已抵达乌克兰。
 
 By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
