--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,11 +1,27 @@
 ---
-title: 共产主义中国是美国和世界面临的唯一最重要的生存威胁
+title: 【秘翻北美时评】各国在俄乌战争中表明立场
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098843/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2098883/)
 
-02/28/2022 皮特·纳瓦罗：共产主义中国是美国和世界面临的唯一最重要的生存威胁
+**BY：[秘翻北美时评](https://gettr.com/post/pxvaf4fcf4)**
 
-By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
+***[2022-03-02](https://gettr.com/post/pxvaf4fcf4)***
+
+
+
+**今日主题：**
+
+**1 美国司法部启动对俄寡头的特别工作组**
+
+**2 各国在俄乌战争中表明立场**
+
+发布：陸柒陸捌
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/03/IMAGE-2022-02-19-171752.jpg)
+
+
+
 
  
 
