--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,11 +1,11 @@
 ---
-title: 中共在俄罗斯入侵乌克兰的核威胁和网络威胁中的角色
+title: 一向中立的瑞士宣布将加入欧盟对俄罗斯的所有制裁
 ---
-`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098643/)
+`秘密翻译组-精翻组 G-Translators/Elite Team` [轉載自GNews](https://gnews.org/zh-hans/2098879/)
 
-02/28/2022 比尔·格茨: 习近平早在2012年就与乌克兰签署了一项协议，为乌克兰提供核保护伞。如果普京对乌克兰使用核武器，那么届时习近平将违反另一项国际协议。此外，中共国和俄罗斯对美国构成了巨大的网络威胁，但美国的网络能力也非常强大。
+02/28/2022 一改传统的中立态度，瑞士总统伊格纳齐奥·卡西斯表示，瑞士将采取欧盟对俄罗斯人和公司实施的所有制裁措施，并冻结他们的资产，以惩罚俄罗斯入侵乌克兰的行为。
 
-By:【秘密翻译组-精翻组 G-Translators/Elite Team】
+By： 【秘密翻译组-精翻组 G-Translators/Elite Team】
 
  
 
