--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,35 +1,29 @@
 ---
-title: 美国退役伞兵加入国际军团以抵抗俄军
+title: 公交运力大减 区域隔离现雏形
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2099447/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2099586/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
+作者：东京樱花团︱阿恩
 
-整理：围剿维尼熊
-编辑：Mohegayer K. Simon
+![](https://assets.gnews.org/wp-content/uploads/2022/03/公交运力大减-区域隔离现雏形.jpg)
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/03/f7f3817f4c8144fe.png)图片来源：雅典娜设计组
+巴士公司染疫的员工人数不断攀升，运输署批准五间巴士公司，明天起至本月16日期间调整服务，包括暂停共98条有其他替代公共交通服务的路线、5条只在假日提供服务的郊游路线及1条通宵路线，其中九巴有88条路线暂停服务。另外，超过2000名港铁员工因为感染中共病毒或需要隔离，占公司人手约两成，导致部分路线要减车。同时，渡轮和小路服务也宣布停航部分线路。
 
+中共病毒感染在香港持续扩大，多间巴士公司的司机和职员染疫被强制隔离，导致大量运营路线被迫停运，严重影响了市民出行。此外，垄断全港铁路运输的港铁也出现大面积感染个案，上千名职员被强制隔离，铁路运力严重受阻。港府一直鼓励市民使用公共交通工具，以减少尾气排放和改善交通状况，并用高油价和高停车费限制私家车的使用频率。香港的交通十分便利，除了红隧在上下班高峰期常出现车龙，其他的干线都比较顺畅，市民的出行效率极高，许多市民都是跨区工作生活。中共病毒加上强制防疫政策，迅速瘫痪了香港的公交网络，许多人被无形囚禁在一些区域，尤其是新市政的地方，离市区遥远，公共交通工具受限制，如果没有私家车就很难进入市区。
 
-根据大纪元2022年3月3日讯，俄罗斯的入侵导致数十万人逃离乌克兰，但也有数万身居国外的乌克兰人返回家园与入侵者作战，甚至一些他国公民也加入了这场战斗。
+建制派立法会议员总是以防疫为由提醒港府，疫情爆发下市区的人流依旧太多。建制议员传递出中共圈禁港人的要求，提出全民强检配合禁足措施，但港府也不想直接执行，以免将愤怒的民意聚焦在自己身上，而强制隔离运输公司的职员是最隐蔽的方法，表面上是无耐之举，市民于情于理不能怪罪染疫情的职员，只能接受越来越窄的生活范围。此举可以将反对的民意减至最低，届时港人只能在居住的区域活动，各区之间的连接被切断，如果中共欲把香港互联网也切断，在各区实施如论怎样残酷的管制都将得心应手。
 
-据福克斯新闻报导，乌克兰组建了一个外籍战士军团，希望国际人士帮助保卫这个正面临威胁的国家。总统泽连斯基说，乌克兰已经收到了来自外国公民的“数千份请求”，希望加入该国部队帮助抗击俄罗斯。
+资料来源：
 
-美国德克萨斯州公民保罗（Paul）已经报名参加了乌克兰的外籍战士军团。保罗曾是美军第101空降师（101st Airborne Division）的伞兵，多次被部署到伊拉克。一年多前，他搬到了乌克兰。
+1、[**多間巴士公司明日起暫停近百巴士線  工會料乘客影響大**](https://news.rthk.hk/rthk/ch/component/k2/1636921-20220303.htm)
 
-根据美国国务院的规定，美国公民加入国际军团是合法的。但是，如果有人在美国境内被雇用，就可能违规。
+2、[**工會指2千港鐵員工染疫隔離未能上班  倘惡化或減班次**](https://news.rthk.hk/rthk/ch/component/k2/1636891-20220303.htm)
 
-参考链接：[美退役伞兵加入国际军团 帮乌克兰抵抗俄军](https://www.epochtimes.com/gb/22/3/2/n13617034.htm)
+3、[**新渡輪及富裕小輪部分航線今起停航**](https://www.wenweipo.com/a/202203/03/AP622062d9e4b036dce9997e21.html)
 
-*发布：tianzhihuan*
-
-**更多资讯，请关注：
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：Himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*校对：东京樱花团 / 東洋武士*
+*发布：东京樱花团 / 老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/03/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
