--- a/gnews/38.md
+++ b/gnews/38.md
@@ -1,26 +1,13 @@
 ---
-title: 新中国联邦的乌克兰救援100%成功
+title: 台湾｜蔡英文接见庞培欧网路直播 因大规模停电而取消
 ---
-`日本東京方舟農場` [轉載自GNews](https://gnews.org/zh-hans/2096801/)
+`關注組` [轉載自GNews](https://gnews.org/zh-hans/2097551/)
 
-**撰稿：日本东京方舟农场 幽蘭自得**
-
-3月2日，郭文贵先生在他的大直播节目中宣布，新中国联邦成功从乌克兰战区救出爆料革命的战友及其家人、朋友，也就是说新中国联邦救助自己的国民100%成功！
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/新中.png)（图片来自盖特）
-
-郭先生指出，由新中国联邦的联盟委员会主导的在乌救援行动，成功地从乌克兰战区救出4个铁战友，3个家庭，他们已于昨日安全到达波兰。
-
-郭先生宣布，在俄乌战争中，新中国联邦100%成功救助自己的国民（新中国联邦人）。
-
-郭先生还在直播中喊话，所有的在乌华人、及他们的美国友人、日本友人，只要联系新中国联邦，新中国联邦就会救助，为他们免费提供30天住宿，免费机票，不需要提供任何个人信息和任何回报。
-
-参考链接：
-[https://gtv.org/broadcast/watch/621f6ab7019ef64da653b4ff](https://gtv.org/broadcast/watch/621f6ab7019ef64da653b4ff)
-
-素材采编：幽蘭自得
-编辑：老孙
-发布: Linda
+**撰文/ 港台前線｜發佈日期/ 03/03/2022**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/Music-Clip-9.png)更多資訊請關注官方蓋特｜please follow our Gettr （[https://gettr.com/post/pwkty7e61c](https://gettr.com/post/pwkty7e61c))
+台湾3日发生[大规模停电，原因待厘清](https://gnews.org/zh-hans/2097381/)。
+![](https://assets.gnews.org/wp-content/uploads/2022/03/截圖-2022-03-03-上午10.58.27.png)
+总统府发言人脸书公告，目前总统府供电未受影响，但总统上午接见美国前国务卿庞培欧之网路直播，则暂时取消，请各界见谅。
 
  
 
