--- a/gnews/39.md
+++ b/gnews/39.md
@@ -1,44 +1,38 @@
 ---
-title: 俄罗斯银行挤兑开始 提醒所有人银行稳定性
+title: 聚焦：俄罗斯空军在乌克兰失去制空权
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2095820/)
+`丁过` [轉載自GNews](https://gnews.org/zh-hans/2097545/)
 
-编译： Jenny Ball
+#### 加拿大温哥华扬帆农场 丁过
+![](https://assets.gnews.org/wp-content/uploads/2022/03/3A6EE0B5-CD76-44D5-B8A1-5266D9061232_1_201_a.jpeg)Military Daily
+在现代战争中，制空权相当于战场主动权。俄罗斯在入侵乌克兰的第二天就宣布摧毁了乌克兰空军，让外界普遍认为乌克兰军队的前景不容乐观
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Loss-Money-Graph-Bankruptcy-Down-Negative-Lose.jpg)图片来源：naturalnews.com
+但据［国家利益］3月2日报道，美国国防部的一名高级官员最近向记者证实，俄罗斯和乌克兰空军每天都在乌克兰上空激战，空战处于胶着状态，俄罗斯空军并未获得制空权。
 
-自然新闻(Natural News)  – 银行挤兑已经在俄罗斯开始了。随着俄罗斯银行与环球银行金融电信协会（SWIFT）的联系被切断，俄罗斯人涌向银行和ATMS。SWIFT这个国际系统是银行处理全球金融交易的主要信息网络，全球机构正在快速瞄准俄罗斯人。俄罗斯的整个银行都被“取消”了，但最终受苦的将是那里的人民。
+该官员说，据五角大楼获得的情报，俄军共有772架战斗机，而乌克兰仅有69架战斗机，目前俄军起码已有75架飞机投入乌克兰战场，空战使双方都损失了飞机。
 
-**人们对全球银行失去信心**
+就俄军为什么一直没有取得制空权的问题，该官员表示，乌克兰飞行员的战斗意志比俄罗斯飞行员更坚定，另外，乌克兰的防空系统和导弹防御系统仍然完好无损，一直正常使用和保卫领空（笔者认为这些令俄空军忌惮的防御系统大部分来自北约的新援）。
 
-在世界各地，人们正在对传统的银行系统失去信心。当贾斯汀·特鲁多（Justin Trudeau）宣布对加拿大银行实行独裁控制，并开始抢劫私人银行账户时，加拿大人民的反应是大量从银行取钱。现在俄罗斯人正在为他们的钱而奔波，因为俄罗斯受到制裁，并与西方世界和国际银行卡特尔隔绝。
+这也是俄罗斯空军不敢大举入侵乌克兰的原因之一。
+![Russia starts supplying it&#039;s most advanced long ranges missile system to  India | S-400 | WION - YouTube](https://i.ytimg.com/vi/_P78t6olZQs/maxresdefault.jpg)Wion
+当记者问到乌克兰空军为什么不摧毁令人担忧的超长俄军车队时，该官员说，俄军用随行（应该是伪装后进入乌克兰）的移动式S-400地对空导弹系统来保护其车队，乌克兰空军难以靠近。
 
-由于俄罗斯银行与 SWIFT 隔绝，它们无法从其他银行转账或接收资金，这将停止外国交易和货币兑换。这不仅威胁到这些目标银行的偿付能力，而且还引发了对卢布可能很快崩盘的猜测。 2 月 28 日星期一，俄罗斯各地的人们排了几个小时的队从 ATM 机取钱。早在凌晨 5 点排队就开始了。
+据悉，俄罗斯已经动用了约80%的陆军部队入侵乌克兰，但仍然无法取得明显的地面优势。为了取得战争主动权，双方下一步对制空权的争夺将更加激烈。
 
-由于欧洲也关闭了通往俄罗斯的领空，并停止现金流入，俄罗斯银行可能别无选择，只能加息。在短短几天内，卢布兑美元的汇率从 80 年代的低点升至 110 卢布兑1美元。
+北约秘书长延斯·斯托尔滕贝格今天表态，北约不会向乌克兰提供战斗机。
 
-**全球主义者以无辜平民为目标，夸大其词**
+但这并不等于乌克兰无法获得先进战斗机，在二战爆发美国未正式参战前，面对英国首相邱吉尔的援助请求，美国通过把作战飞机和舰艇运到加拿大边境等办法，绕过了相关国际禁令，援助盟国大批作战装备。
 
-目前，全球主义者正瞄准俄罗斯银行，并对俄罗斯人民发动战争。世界各地的人们都在了解到，这些机构对他们拥有巨大的权力，因为他们下意识地接受了培训，在所有涉及其财务安全的事务上都遵守规定。但是通过制裁整个银行，并针对无数无辜平民，全球主义者正在大肆渲染，并暴露其影响力的腐败和极权主义。
+由于乌克兰沦陷对北约的安全利益非常不利，北约将给予乌克兰所有的必要军援，包括保障乌军不丧失制空权。
 
-全球主义者的战争般的行动，正在削弱公众对传统银行机构的信心，无论是在俄罗斯、加拿大、欧洲还是美国。通过冻结的银行账户，无辜平民被直接掠夺，或通过货币贬值间接被掠夺，他们希望收回他们的钱，并将其投资于他们拥有更多自主权，且货币具有更多有形价值的地方。
+可以预计，来自世界各国的先进战机、防空系统和导弹防御系统、专门打击坦克战车可超低空飞行（躲开俄军防空导弹）无人机、更多的毒剌导弹等等军事援助，将通过各种渠道源源不断交付给乌克兰军队。
 
-（点评：这就是喜币出世和其双币设计的重大意义所在。）
+从乌克兰空战可以看出，俄罗斯就是一只纸糊的熊，随着时间的推移，战争形势将朝着更加不利于俄军的方向发展，因为这是人心所向
 
-在世界各地，人们都知道他们的钱在传统银行系统中并不安全。如果这些政府和银行机构的负责人将您视为威胁，他们将追踪您的资金和资产，并禁止您进入他们的系统。俄罗斯人民正痛苦地意识到这一点。加拿大的人们也在见证它。
+参考来源：
 
-加拿大政府的目标是针对任何在经济上支持医疗自由和身体自主权的人。加拿大政府正在使用疫苗命令将人们从公共生活中驱逐出去。当这些人为他们的生命、事业和未来而抗议时，加拿大政府会在没有正当程序的情况下没收他们的资产、逮捕、践踏和监禁他们。多年来，同样的道德和伦理困境在美国一直存在，因为 PayPal、YouTube、谷歌和 Facebook 等公司相互协调去平台化、去银行化和取消政治反对派，或关闭任何就医疗自由和疫苗选择等重要话题说真话的人。
+[https://nationalinterest.org/blog/buzz/why-hasnt-russia-established-air-superiority-over-ukraine-200922](https://nationalinterest.org/blog/buzz/why-hasnt-russia-established-air-superiority-over-ukraine-200922)
 
-俄罗斯、加拿大和美国的攻击只是战争行为的开始，这将不可避免地导致世界各地人们开展业务和相互交易的方式发生巨大变化。
-
-**参考资料：**[naturalnews][Bank runs begin in Russia, serving as a reminder for ALL people to question the stability of all banks around the world](https://www.naturalnews.com/2022-02-28-bank-runs-begin-in-russia-people-question-stability-of-all-banks.html)
-
-* * *
-
-*审核：文乐*
-*校对：小东*
-*发稿：信心的选择*
-![]()
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
