--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,32 +1,31 @@
 ---
-title: 中共将毀于自身的假和騙
+title: “天安门母亲”：承载八九六四之重并护佑新中国联邦六四之新生
 ---
-`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/2095233/)
+`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/2095816/)
 
-撰稿：紐約磐石农场-在远方
+作者：滴水穿石
+![2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。（天安门母亲提供图片）](https://gdb.voanews.com/284009E2-C1EA-405E-8772-F18FD3117E22_cx0_cy10_cw0_w1023_r1_s.jpg) 2020年6月4日，部分六四难属在警方监视下到北京万安公募举行集体悼念活动。图片来源：VOA
+母亲是一个亲切而美感的名字，在人类社会中充当一个 遵守上天旨意，繁衍生息孕育生命的角色，最受人敬重的地位 。然而， 在中共乌托帮从苏联引进邪恶势力进入中国的百年中，当中共从国民政府夺取政权之后，中国当代发生的历史悲惨事件，在全球有极大影响中的母亲形象，让我们从这些母亲的命运看清中共魔鬼的邪恶。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/06AB5F9F-4CB6-4895-A168-24655B6E2F5B.jpeg)
+1989年6月3号晚到4日凌晨， 中共用军队坦克 在天安门10几万学生与市民使用坦克与机枪进行血淋淋的武力镇压，天安门附近所有的医院接收满了大批伤员与死者，医院的停尸房爆满血迹的尸体，连自行车棚都摆满了血肉模糊的尸体。
 
+中共运用军队在北京天安门广场血腥镇压十几万学生市民之后，中共政府运用警察的力量在全国挨个寻查所有参加64平抗议运动学生与平民。在上海、杭州几个大城市参与抗议运动的学生与平民先后被 中共秘密处决，这些数字比在天安门广场被屠杀的学生平民数字还要更多！
 
+想想在全国很多学生因为被秘密枪决，保守失踪的人数都不止十万！ 这些被失踪和枪决的学生与6月4日那一天被中共军队屠杀的几万学生与平民，他们的 母亲而成为有人性与亲情的中国人心中的**“**天安门母亲**”。**
 
+这**“天安门母亲”群体**由中国人民大学丁子霖教授发起成立，丁子霖的儿子蒋捷连，在89-64的夜里，被一颗从背后穿透心脏从前胸钻出的子弹夺去了他17岁年轻的生命。从1994年起，**“天安门母亲”家属**群体每年都会联名致函中共政府为“六四事件”承担责任。
 
-```
-在2月27日的大直播中，郭先生表示，俄乌战争对中共的触动很大，已经影响到中共的对台作战战略，但是中共将会毁于自身的假和骗。
-```
+笔者从友人的口述回忆：一家三口住在天安门广场旁边的一个民居建筑，儿子听到枪声不断，跑到窗口伸出脖子往广场观察，忽然对面扫射的弹头击中，脑袋中弹当场倒地。 父母看到孩子突然中弹倒地，那个血色恐怖之夜成夫妻俩一辈子的痛苦，那一夜，中弹而死亡的孩子母亲也成“天安门母亲”。
 
+让我们回顾中国当代的“八九64＂运动，纪念在事件中被中共屠杀的不少于20万的学生和平民，特别是 因此而成为**“天安门母亲”** ，她们一直在寻找她们失踪的孩子。其中这些母亲也陆续离开了人间，我们活着有正义的人们应该为64学生运动正名，统计所有在64运动及后续被中共屠杀与被失踪的名单，以此例证中共的反人类罪行，以安慰**＂天安门＂母亲**，同以安抚逝去32年的六四亡灵。
 
-郭先生说，习近平具有非常矛盾的性格，文化程度不高、循规蹈矩却又非常固执倔强。“双头鹰计划”是习近平与普京的既定战略，因此对于习来说，开两会和打台湾并不对立。据中共军方人士告诉郭先生说，中共原先认为俄罗斯会在48小时内拿下乌克兰，并对泽连斯基进行斩首。因此中共也曾经计划迅速攻下台湾，并用无人机对民进党高层进行斩首。或者依靠台湾卖台贼进行内部斩首，即所谓的“杀独救台”。但是俄乌战争中俄罗斯糟糕的表现，和乌克兰成功的信息战、科技战、网络战所形成的强烈对比，对中共有很深的触动。
-中共军委副主席许其亮和总参三部的李八喜，看到俄乌战争战况以后表示，如果共军使用最廉价的武器进行闪电战，妄图侵略台湾的结局恐怕会适得其反。因为不仅美日在台海周围布置了潜艇部队，而且共军攻台的空军、无人机和导弹，都依赖信息通信，而共军的电子战又是他们的致命短板，因此当前俄乌战争状况对中共军方震动很大，已经影响到了共军的攻台战略。但是共军的下级军官为了保全自身的命运和既得利益，却只能欺骗共军高层应该继续对台湾实行闪电战，因此中共一定会毁于自身的相互造假和相互欺骗。
+有一句谚语：**“他们试图把我们都埋了，但不知道我们其实是种子。”**
 
-[新闻鏈接] [https://www.gettr.com/post/pxjkrya329](https://www.gettr.com/post/pxjkrya329)
+64天安门大屠杀，表面貌是学生与大兵和中共官方对峙，人与坦克的对抗，但其本质内涵是民主与独裁、和平与暴力的抗争。这是华夏民族与独裁统治政权长达几十年的抗争，正义与邪恶势力的争战从未停息。“八九64”运动在全球产生的蝴蝶效应，如同一颗种子对世界产生的正道主义的影响力及异象深远。
 
-编輯/校正/发稿：玫瑰圓
+2020年6月4日成立的新中国联邦，是华夏人民的诺亚方舟，这个承载**64种子**的希望，**全球灭共，天道酬勤，中国的**政权必将回归到人民的手中，人类文明世界继以向前发展！新中国联邦与新中国联邦人势必在其中同行！
 
-![](https://assets.gnews.org/wp-content/uploads/2022/03/FE32174F-B5FA-43BD-AE1B-C10F3D2323AA.jpeg)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/03/D120B9F8-8EAE-4A1D-BF30-50A005DE6427.jpeg)
-
-
+校对发布：Shifter
 
  
 
