--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,37 +1,42 @@
 ---
-title: 美国白宫对俄罗斯和白俄罗斯最新制裁
+title: 大直播后记：个人决定的正义标准，新加坡海关支持乌克兰
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2099428/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2099510/)
 
-作者：波士顿五月花背靠背（Frankie）
-![](https://assets.gnews.org/wp-content/uploads/2022/03/Screen-Shot-2022-03-03-at-6.46.55-PM.png)图片来源：互联网
-美国白宫周三（3月2日）对俄罗斯和白俄罗斯做出新的制裁，回应俄罗斯入侵乌克兰。
+#### 整理：HomeL、Lucy Liu
+编辑：小鱼儿
 
-白宫表示：”正与盟国和伙伴协调，对俄罗斯和白俄罗斯施加额外的经济成本。美国将采取行动追究白俄罗斯促成普京入侵乌克兰的责任，削弱俄罗斯国防部门及其未来几年的军事力量，瞄准俄罗斯最重要的财富来源，并禁止俄罗斯航空公司进入美国领空。“【1】
+- ![](https://assets.gnews.org/wp-content/uploads/2022/03/图片3-5.png)图片来源：雅典娜农场设计组
 
-白宫还表示，俄罗斯已经成为全球经济和金融的弃儿。
 
-最新制裁包括:
+但这一次，在世界的互联网和媒体面前，过去的叫做政治集团操纵下的、所谓的正义标准；今天，由社交媒体决定的叫个人观点、叫个人决定的正义标准。人类上，从来没有过。
 
-1、对白俄罗斯全面限制其技术产品的进口。美国商务部将把对俄罗斯出口管制政策扩大到白俄罗斯，防止物品、技术和软件通过白俄罗斯转移到俄罗斯。
+这个移民官，完全基于自己的了解，做出对你（罗伊）友好的态度。如果你说，我是中国共产党员，我准备支持俄罗斯打乌克兰。结局会是什么？战友们看，有没有发生？
 
-2、美国国务院对22个被指认的俄罗斯国防实体全面封锁制裁。包括为俄罗斯军队制造作战飞机、步兵战车、电子战系统、导弹和无人驾驶飞行器的公司。
+在一个最、最亲共的新加坡，有人在那儿拿着俄罗斯的旗。人家（新加坡）边防问他，你拿这旗干什么？他说，支持俄罗斯，俄罗斯的战争。人家说，是吗？说完以后，人家拿着那个章，看了看，把章放下，扒拉抽屉半天，咔嚓！
 
-3、针对俄罗斯军事主要收入来源制裁。商务部限制长期支持俄罗斯炼油能力的技术出口，美国和盟友在逐步减少降低对俄罗斯能源依赖有着共同利益。
+新加坡有一个章叫：永远不准入境。人家边防，接着问，还有谁是你家人？这个傻货说，这个这个都是我家人。（边防人员）说，来。咔咔两下，全盖了章！还有吗？你可以离开了。他没闹明白问，你盖了什么章？——终身不准进入新加坡的章！（这个傻货，是）广东东莞人。
 
-欧盟国家对煤炭需求的减少，转向更加清洁的能源-天然气，加剧了对俄罗斯能源的依赖，比如欧盟天然气进口大约50%来自俄罗斯，德国对俄罗斯天然气依赖超过50%。因此德国在俄罗斯入侵乌克兰早期，态度不明确，左右为难。
+新加坡亲共吧？新加坡老百姓，也是没办法被强奸，（因为）利益被绑架。李家是最反共的——我跟生活中，跟李家、李光耀、何晶全打过交道——骨子里边说，中国共产党要没了，这个世界就太好了！他没办法，贸易、经济、文化、银行全被共产党控制了。新加坡的这个移民官，不管你那一套，去你大爷的。支持俄罗斯？那个（终身不得入境）章给你全家砸上。
 
-郭先生大直播指出，就在俄罗斯入侵乌克兰时候，俄罗斯通过北溪2号线给德国供应天然气一刻也没有停过。
+你未来看看，咱的战友出来直播，咱的战友超级聪明，立马到别的通道过（海）关。还有一个国内的大V，在网上支持俄罗斯打乌克兰。他也是过境新加坡，妻子孩子三个人，还带着狗。这位大V给边境人员，展示支持俄罗斯的视频。边防人员，咔咔，给他盖了个(永不准入境)的章,让他滚！
 
-4、商务部在与机构间合作伙伴的协调下，通过管理支持俄罗斯和白俄罗斯军队的实体清单，确保军队以及航空航天、海事和高科技部门不会获得可用于支持俄罗斯技术维护和创新的美国技术产品和技术。
+你要相信共产党，你再作试试。你到所有的西方国家，你把俄罗斯旗打出来——支持俄罗斯打乌克兰。你看你啥待遇？不把你关黑屋，都不错了。
 
-5、禁止俄罗斯飞机进入和使用美国国内空域，孤立俄罗斯，与世界上30多个最重要的航空市场站在一起，剥夺了俄罗斯航空公司开展业务的能力。【1】郭先生2月25日大直播中爆料，一个俄罗斯拥有5000架超级私人飞机，仅南法俄罗斯游艇价值就是俄罗斯GDP（1万多亿美元）一倍达2万亿美元， 每年固定成本20%即2000亿。
+现在，你只要拿中国旗是什么概念？在乌克兰的头两天，大使馆让大家贴上中国旗。这个愚蠢的行为，害死了多少人？现在，（在乌克兰）只要看到中国旗的车，邦邦邦就几枪。 有人说，我开着车，车直接干一边儿去了。为啥？人家没打我的车玻璃，把我的车胎、四个胎全部打烂。
 
-参考链接：【1】**[美国继续为普京的选择之战向俄罗斯和白俄罗斯施加成本](https://www.whitehouse.gov/briefing-room/statements-releases/2022/03/02/fact-sheet-the-united-states-continues-to-impose-costs-on-russia-and-belarus-for-putins-war-of-choice/)**
+然后呢？滚回你的中国，或者去俄罗斯莫斯科的红场，那里是你应该去的地方。乌克兰人还挺冷静，不开枪射玻璃，不开枪打人，车里还坐着好几个女孩子。你想想，中国共产党有多邪恶——让你贴上共产党的旗，基本上是“请来杀我吧”；这跟“请来奸我吧”，没什么两样。
 
-* * *
+资料来源：[2022年3月2日  文贵大直播](https://gettr.com/post/pxru0n55ba)
 
-*编辑&发布：Vicky*
+*发布：玉米地守望者*
+
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
