--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,34 +1,30 @@
 ---
-title: 人口贩卖产业链
+title: 秘翻在线：担心俄罗斯利用加密货币规避制裁，民主党人向财政部施压
 ---
-`银河勇气之星` [轉載自GNews](https://gnews.org/zh-hans/2099380/)
+`新加坡狮城农场 Himalaya Singapore` [轉載自GNews](https://gnews.org/zh-hans/2099460/)
 
-BY:银河系农场|楚天秋
-![](https://assets.gnews.org/wp-content/uploads/2022/03/图片1-13.png)
-图源：网络
+**撰稿：彩虹**
 
-多数墙国百姓对拐卖妇女儿童也有所耳闻，因为中共隔段时间就搞一次打拐专项行动，让人们感觉声势挺大，特别是那些还在寻找失踪儿童的家庭，会觉得有希望。然而丰县铁链女事件发生之后，中共又宣布从3月1日到12月31日，在全国范围内打击拐卖妇女儿童犯罪。这时候搞专项行动，似乎就没什么声势了，细想之下总觉得不对劲。丰县已经被围得铁桶一般谁也进不去，铁链女还被绑在医院病床上，这众所周知的性质极其恶劣的绑架、强暴、虐待、残害连环罪案，已有不了了之的趋势。这个案子都弄到天怒人怨尚不能解决，谁还指望全国范围的打拐行动，公安部此时打拐，是在讲冷笑话，言下之意就是别当真，无论发生什么事，有没有观众，它们都继续演下去。
+**校对：人间四月**
+![](https://assets.gnews.org/wp-content/uploads/2022/03/11-4.jpg)图片来源：彭博社
+据《国会山报》3月2日报道，鉴于人们对俄罗斯是否可以利用数字资产来规避美国制裁措施的担忧正在上升，民主党人正在向财政部（Treasury Department）施加压力，要求其提供有关在加密货币行业内实施制裁计划的信息。
 
-中共在全国范围内搞任何运动，目的只有一个，就是洗脑。每隔几年就要运动一下的不止是打拐，还有扫黄打非、扫黑除恶，仿佛民间有无数个色情泛滥、黑帮横行，老百姓苦不堪言，急需中共救民于水火。
+这封周三写给财政部的信由几位民主党人带领立法者们共同牵头，包括参议员伊丽莎白·沃伦（Elizabeth Warren）、参议院情报委员会主席马克·华纳（Mark Warner），参议院银行、住房和城市事务委员会主席谢罗德·布朗（Sherrod Brown）和参议院军事委员会主席杰克·里德（Jack Reed）。
 
-每次行动结束，毫无意外地表彰会，展示出一个有一个成果，有的没的全算上，从一个胜利走向下一个胜利，这才是最关键的，让老百姓忘记自己的痛苦，跟着中共的节奏起起伏伏，这是它们的真实目的。
+在信中，立法者们询问了财政部“在监测和执行加密货币行业遵守制裁方面的进展”，然后表达了对“犯罪分子、无赖国家和其他行为者可能利用数字资产和替代支付平台，作为一种新的手段来隐藏跨境交易以达到邪恶目的”的担忧。
 
-实际上全是扯淡，黄赌毒一个基层派出所就能完全搞定，收归治下，定期收账，坐地分赃，在中共这个宇宙最大黑帮面前，还有谁敢说自己是黑社会，谁敢说自己是捞偏门的，老老实实帮中共干脏活，适时地被拉出几个来平民愤，这大概就是黄赌毒存在于民间的意义。
+信中写道，鉴于拜登政府因俄罗斯正在进行的军事入侵而对其实施的一系列制裁，这些担忧变得更加紧迫。立法者们还引用《纽约时报》最近发表的一篇报道，其中专家警告说，俄罗斯公司可以利用“加密货币工具”来规避制裁。
 
-李莹事件之后，再看“打拐”完全是个伪命题。这个案件暴露的真相不是拐卖可以概括的，这种规模化、程序化、职业化和严密程度，是人口贩卖全产业链。每年几百万人口，在密布监控摄像头的中共国凭空失踪，找回的寥寥无几，这就是中共参与其中而且起决定作用造成的。这些被绑架的人，也不局限于妇女儿童，青壮年男性可能被用来器官配型，除了满足中共高层换器官的需要，也为各地医院提供器官来源，这在郭先生爆料中已经证明。当然也有部分“没用”的男性，可能流入黑煤窑和黑砖窑，最终结局多数是残杀虐待而死。妇女儿童受到的折磨更久，产业链条延申的更长。如果被卖给所谓的黑社会组织，那么下一级要么进入色情场所，要么被弄成残疾沿街乞讨，长期为黑社会赚钱，也成为中共定期收割的对象。还有就是如铁链女这样的，直接献给当地官员，玩腻了转手在民间倒来倒去。
+报道指，立法者们要求财政部在3月23日之前回答相关问题，问题包括：“外国资产管制处（OFAC）将如何与外国政府和国际银行界的其他参与者合作，以确保加密货币不被用来逃避制裁。”以及所有“外国资产管制处在虚拟货币行业记录的违反制裁行为是什么？”
 
-这个产业链的任何环节，都必须有中共官员的庇护，不然很难进行下去，所谓的地方大姓，并非指的是纯民间的宗族势力，这是中共瞎说的，49年之后不存在宗族势力，官权是唯一压倒性的势力，任何黑恶势力不抱住中共的大腿，一天也存在不下去。当老百姓恨天地不公，自己命该如此的时候，其实就是中共在背后作恶。贪腐盗国是中共的主业，掌控庞大的人口贩卖作为副业，一直存在。就像那些自己吸毒又贩毒的毒贩一样，中共的邪恶需要任意虐杀同类，但这和贪腐不同，
+对于相关支持，立法者问道：“外国资产管理处可能需要哪些额外的工具，以确保加密货币参与者不能帮助俄罗斯或其他恶意行为者逃避美国和多边制裁？”
 
-是个正常人都无法接受，所以必须严密控制消息，以至于铁链女被折磨二十多年才暴露在大众面前。
+文章说，在周三的信件发布后不久，沃伦告诉国会：“已经很清楚的是，贩毒者、勒索软件、骗子和偷税漏税者都在使用加密货币，因为它是一种在当局无法追踪的情况下转移资金的方式。所以问题是，财政部如何评估风险，他们对此做了什么？这就是我们现在对财政部进行推动的原因。”
 
-随着越来越多人口贩卖事件被揭露，墙内较为活跃的互联网用户开始觉醒，这大概相当于郭先生经常说的健心过程，中共行将覆灭，要让墙内百姓认清其邪恶本质，需要一个适应过程。正如那些身在乌克兰的小粉红，贴着五星红旗被打爆轮胎，才知道自己被中共坑了一样。
+**新闻来源**
 
-作者：楚天秋
+[Democrats press Treasury over concerns Russia could use cryptocurrency to evade sanctions](https://thehill.com/homenews/house/596601-house-passes-resolution-backing-ukraine)
 
-发布：天雷滚滚
-
-日本[银河系农场Discord群](https://discord.com/channels/805765245758472202/851632878567948351)，欢迎加入银河系农场。欢迎各农场兄弟姐妹们坐客串门，欢迎订阅我们的我们的G-TV官方频道[日本银河系农场](https://gtv.org/user/60c0168b8ce6da73c416c24b#home)、[银河农场–勇气星球](https://gtv.org/user/5f0d36870cac397fcf00154c)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/345-1-1-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
